@@ -48,6 +48,7 @@ public class SystemParameterService {
 
     private static final String DEFAULT_LOG_TIME = "6D";
     private static final String DEFAULT_HISTORY_TIME = "10";
+    private static final String DEFAULT_API_CONCURRENT_CONFIG = "3";
 
     public void saveBaseInfo(List<SystemParameter> parameters) {
         SystemParameterExample example = new SystemParameterExample();
@@ -58,7 +59,7 @@ public class SystemParameterService {
                 List<SystemParameter> baseUrlParameterList = systemParameterMapper.selectByExample(example);
                 String oldBaseUrl = null;
                 if (CollectionUtils.isNotEmpty(baseUrlParameterList)) {
-                    SystemParameter parameter = baseUrlParameterList.get(0);
+                    SystemParameter parameter = baseUrlParameterList.getFirst();
                     if (!StringUtils.equals(parameter.getParamValue(), param.getParamValue())) {
                         oldBaseUrl = parameter.getParamValue();
                         systemParameterMapper.updateByPrimaryKey(param);
@@ -323,5 +324,13 @@ public class SystemParameterService {
             });
         }
         return configDTO;
+    }
+
+    public String getApiConcurrentConfig() {
+        List<SystemParameter> paramList = this.getParamList(ParamConstants.ApiConcurrentConfig.API_CONCURRENT_CONFIG.getValue());
+        if (CollectionUtils.isNotEmpty(paramList)) {
+            return paramList.getFirst().getParamValue();
+        }
+        return DEFAULT_API_CONCURRENT_CONFIG;
     }
 }
