@@ -6,6 +6,7 @@ import io.metersphere.plan.constants.AssociateCaseType;
 import io.metersphere.plan.domain.*;
 import io.metersphere.plan.dto.*;
 import io.metersphere.plan.dto.request.*;
+import io.metersphere.plan.dto.response.TestPlanCaseExecHistoryResponse;
 import io.metersphere.plan.dto.response.TestPlanReportDetailResponse;
 import io.metersphere.plan.dto.response.TestPlanReportPageResponse;
 import io.metersphere.plan.enums.TestPlanReportAttachmentSourceType;
@@ -14,10 +15,8 @@ import io.metersphere.plan.utils.CountUtils;
 import io.metersphere.plan.utils.ModuleTreeUtils;
 import io.metersphere.plan.utils.RateCalculateUtils;
 import io.metersphere.plugin.platform.dto.SelectOption;
-import io.metersphere.sdk.constants.DefaultRepositoryDir;
-import io.metersphere.sdk.constants.ExecStatus;
-import io.metersphere.sdk.constants.ReportStatus;
-import io.metersphere.sdk.constants.TestPlanConstants;
+import io.metersphere.project.service.FileService;
+import io.metersphere.sdk.constants.*;
 import io.metersphere.sdk.exception.MSException;
 import io.metersphere.sdk.file.FileCenter;
 import io.metersphere.sdk.file.FileCopyRequest;
@@ -31,6 +30,7 @@ import io.metersphere.system.mapper.UserMapper;
 import io.metersphere.system.notice.constants.NoticeConstants;
 import io.metersphere.system.service.SimpleUserService;
 import io.metersphere.system.uid.IDGenerator;
+import io.metersphere.system.utils.ServiceUtils;
 import jakarta.annotation.Resource;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -38,10 +38,14 @@ import org.apache.ibatis.session.ExecutorType;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import org.mybatis.spring.SqlSessionUtils;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -65,11 +69,15 @@ public class TestPlanReportService {
     @Resource
     private ExtTestPlanReportMapper extTestPlanReportMapper;
     @Resource
+    private FileService fileService;
+    @Resource
+    private TestPlanReportAttachmentMapper testPlanReportAttachmentMapper;
+    @Resource
     private ExtTestPlanReportBugMapper extTestPlanReportBugMapper;
     @Resource
     private ExtTestPlanReportFunctionalCaseMapper extTestPlanReportFunctionalCaseMapper;
-	@Resource
-	private TestPlanCaseExecuteHistoryMapper testPlanCaseExecuteHistoryMapper;
+    @Resource
+    private TestPlanCaseExecuteHistoryMapper testPlanCaseExecuteHistoryMapper;
     @Resource
     private ExtTestPlanReportApiCaseMapper extTestPlanReportApiCaseMapper;
     @Resource
@@ -82,18 +90,20 @@ public class TestPlanReportService {
     private TestPlanReportSummaryMapper testPlanReportSummaryMapper;
     @Resource
     private TestPlanReportFunctionCaseMapper testPlanReportFunctionCaseMapper;
-	@Resource
-	private TestPlanReportApiCaseMapper testPlanReportApiCaseMapper;
-	@Resource
-	private TestPlanReportApiScenarioMapper testPlanReportApiScenarioMapper;
+    @Resource
+    private TestPlanReportApiCaseMapper testPlanReportApiCaseMapper;
+    @Resource
+    private TestPlanReportApiScenarioMapper testPlanReportApiScenarioMapper;
     @Resource
     private TestPlanReportBugMapper testPlanReportBugMapper;
     @Resource
-    private TestPlanReportAttachmentMapper testPlanReportAttachmentMapper;
-    @Resource
     private BaseUserMapper baseUserMapper;
-	@Resource
-	private TestPlanSendNoticeService testPlanSendNoticeService;
+    @Resource
+    private TestPlanSendNoticeService testPlanSendNoticeService;
+    @Resource
+    private ExtTestPlanCaseExecuteHistoryMapper extTestPlanCaseExecuteHistoryMapper;
+    @Resource
+    private TestPlanReportComponentMapper componentMapper;
 
     /**
      * 分页查询报告列表
@@ -199,13 +209,13 @@ public class TestPlanReportService {
         testPlanReportFunctionCaseExample.createCriteria().andTestPlanReportIdIn(reportIdList);
         testPlanReportFunctionCaseMapper.deleteByExample(testPlanReportFunctionCaseExample);
 
-		TestPlanReportApiCaseExample testPlanReportApiCaseExample = new TestPlanReportApiCaseExample();
-		testPlanReportApiCaseExample.createCriteria().andTestPlanReportIdIn(reportIdList);
-		testPlanReportApiCaseMapper.deleteByExample(testPlanReportApiCaseExample);
+        TestPlanReportApiCaseExample testPlanReportApiCaseExample = new TestPlanReportApiCaseExample();
+        testPlanReportApiCaseExample.createCriteria().andTestPlanReportIdIn(reportIdList);
+        testPlanReportApiCaseMapper.deleteByExample(testPlanReportApiCaseExample);
 
-		TestPlanReportApiScenarioExample testPlanReportApiScenarioExample = new TestPlanReportApiScenarioExample();
-		testPlanReportApiScenarioExample.createCriteria().andTestPlanReportIdIn(reportIdList);
-		testPlanReportApiScenarioMapper.deleteByExample(testPlanReportApiScenarioExample);
+        TestPlanReportApiScenarioExample testPlanReportApiScenarioExample = new TestPlanReportApiScenarioExample();
+        testPlanReportApiScenarioExample.createCriteria().andTestPlanReportIdIn(reportIdList);
+        testPlanReportApiScenarioMapper.deleteByExample(testPlanReportApiScenarioExample);
 
         TestPlanReportBugExample testPlanReportBugExample = new TestPlanReportBugExample();
         testPlanReportBugExample.createCriteria().andTestPlanReportIdIn(reportIdList);
@@ -218,8 +228,49 @@ public class TestPlanReportService {
      * @param request     请求参数
      * @param currentUser 当前用户
      */
-    public void genReportByManual(TestPlanReportGenRequest request, String currentUser) {
-		genReport(IDGenerator.nextStr(),request, true, currentUser, "/test-plan/report/gen");
+    public String genReportByManual(TestPlanReportManualRequest request, String currentUser) {
+        /*
+         * 1. 生成报告 (全量生成; 暂不根据布局来选择生成报告预览数据, 因为影响分析汇总)
+         * 2. 保存报告布局组件 (只对当前生成的计划/组有效, 不会对下面的子计划报告生效)
+         * 3. 处理富文本图片
+         */
+        Map<String, String> reportMap = genReport(IDGenerator.nextStr(), request, true, currentUser);
+        String genReportId = reportMap.get(request.getTestPlanId());
+        List<TestPlanReportComponentSaveRequest> components = request.getComponents();
+        if (CollectionUtils.isNotEmpty(components)) {
+            SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+            TestPlanReportComponentMapper batchMapper = sqlSession.getMapper(TestPlanReportComponentMapper.class);
+            List<TestPlanReportComponent> reportComponents = new ArrayList<>();
+            components.forEach(component -> {
+                TestPlanReportComponent reportComponent = new TestPlanReportComponent();
+                BeanUtils.copyBean(reportComponent, component);
+                reportComponent.setId(IDGenerator.nextStr());
+                reportComponent.setTestPlanReportId(genReportId);
+                reportComponents.add(reportComponent);
+            });
+            batchMapper.batchInsert(reportComponents);
+            sqlSession.flushStatements();
+            SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
+		}
+        // 更新报告默认布局字段
+        TestPlanReport record = new TestPlanReport();
+        record.setId(genReportId);
+        record.setDefaultLayout(false);
+        record.setName(request.getReportName());
+        testPlanReportMapper.updateByPrimaryKeySelective(record);
+        // 处理富文本文件
+        transferRichTextTmpFile(genReportId, request.getProjectId(), request.getRichTextTmpFileIds(), currentUser, TestPlanReportAttachmentSourceType.RICH_TEXT.name());
+        return reportMap.get(request.getTestPlanId());
+    }
+
+    /**
+     * 自动生成报告 (计划 或者 组)
+     * @param request 请求参数
+     * @param currentUser 当前用户
+     */
+    public String genReportByAuto(TestPlanReportGenRequest request, String currentUser) {
+        Map<String, String> reportMap = genReport(IDGenerator.nextStr(), request, true, currentUser);
+        return reportMap.get(request.getTestPlanId());
     }
 
     /**
@@ -230,69 +281,71 @@ public class TestPlanReportService {
      * @param currentUser 当前用户
      */
     @Transactional(rollbackFor = Exception.class, propagation = Propagation.REQUIRES_NEW)
-    public Map<String, String> genReportByExecution(String prepareReportId,TestPlanReportGenRequest request, String currentUser) {
-        return genReport(prepareReportId,request, false, currentUser, "/test-plan/report/gen");
+    public Map<String, String> genReportByExecution(String prepareReportId, TestPlanReportGenRequest request, String currentUser) {
+        return genReport(prepareReportId, request, false, currentUser);
     }
 
-    public Map<String, String> genReport(String prepareReportId,TestPlanReportGenRequest request, boolean manual, String currentUser, String logPath) {
-		Map<String, String> preReportMap = new HashMap<>();
-		try {
-			// 所有计划
-			List<TestPlan> plans = getPlans(request.getTestPlanId());
-			// 模块参数
-			TestPlanReportModuleParam moduleParam = getModuleParam(request.getProjectId());
+    public Map<String, String> genReport(String prepareReportId, TestPlanReportGenRequest request, boolean manual, String currentUser) {
+        Map<String, String> preReportMap = new HashMap<>();
+        try {
+            // 所有计划
+            List<TestPlan> plans = getPlans(request.getTestPlanId());
+            // 模块参数
+            TestPlanReportModuleParam moduleParam = getModuleParam(request.getProjectId());
 
-			/*
-			 * 1. 准备报告生成参数
-			 * 2. 预生成报告
-			 * 3. 汇总报告数据 {执行时跳过}
-			 * 3. 报告后置处理 (计算通过率, 执行率, 执行状态...) {执行时跳过}
-			 */
-			List<String> childPlanIds = plans.stream().filter(plan -> StringUtils.equals(plan.getType(), TestPlanConstants.TEST_PLAN_TYPE_PLAN)).map(TestPlan::getId).toList();
+            /*
+             * 1. 准备报告生成参数
+             * 2. 预生成报告
+             * 3. 汇总报告数据 {执行时跳过}
+             * 3. 报告后置处理 (计算通过率, 执行率, 执行状态...) {执行时跳过}
+             */
+            List<String> childPlanIds = plans.stream().filter(plan -> StringUtils.equals(plan.getType(), TestPlanConstants.TEST_PLAN_TYPE_PLAN)).map(TestPlan::getId).toList();
 
             boolean isGroupReports = plans.size() > 1;
-			plans.forEach(plan -> {
-				request.setTestPlanId(plan.getId());
-				TestPlanReportGenPreParam genPreParam = buildReportGenParam(request, plan, prepareReportId);
-				if (!manual) {
-					//不是手动保存的测试计划报告，不存储startTime
-					genPreParam.setStartTime(null);
-				}
-				genPreParam.setUseManual(manual);
+            plans.forEach(plan -> {
+                request.setTestPlanId(plan.getId());
+                TestPlanReportGenPreParam genPreParam = buildReportGenParam(request, plan, prepareReportId);
+                if (!manual) {
+                    //不是手动保存的测试计划报告，不存储startTime
+                    genPreParam.setStartTime(null);
+                }
+                genPreParam.setUseManual(manual);
                 //如果是测试计划的独立报告，使用参数中的预生成的报告id。否则只有测试计划组报告使用该id
                 String prepareItemReportId = isGroupReports ? IDGenerator.nextStr() : prepareReportId;
-				TestPlanReport preReport = preGenReport(prepareItemReportId, genPreParam, currentUser, logPath, moduleParam, childPlanIds);
-				if (manual) {
-					// 汇总
-					if (genPreParam.getIntegrated()) {
-						summaryGroupReport(preReport.getId());
-					} else {
-						summaryPlanReport(preReport.getId());
-					}
-					// 手动生成的报告, 汇总结束后直接进行后置处理
-					TestPlanReportPostParam postParam = new TestPlanReportPostParam();
-					postParam.setReportId(preReport.getId());
-					// 手动生成报告, 执行状态为已完成, 执行及结束时间为当前时间
-					postParam.setExecuteTime(System.currentTimeMillis());
-					postParam.setEndTime(System.currentTimeMillis());
-					postParam.setExecStatus(ExecStatus.COMPLETED.name());
-					postHandleReport(postParam, true);
-				}
-				preReportMap.put(plan.getId(), preReport.getId());
-			});
-		} catch (Exception e) {
-			LogUtils.error("生成报告异常: " + e.getMessage());
-		}
-		return preReportMap;
+                TestPlanReport preReport = preGenReport(prepareItemReportId, genPreParam, currentUser, moduleParam, childPlanIds);
+                if (manual) {
+                    // 汇总
+                    if (genPreParam.getIntegrated()) {
+                        summaryGroupReport(preReport.getId());
+                    } else {
+                        summaryPlanReport(preReport.getId());
+                    }
+                    // 手动生成的报告, 汇总结束后直接进行后置处理
+                    TestPlanReportPostParam postParam = new TestPlanReportPostParam();
+                    postParam.setReportId(preReport.getId());
+                    // 手动生成报告, 执行状态为已完成, 执行及结束时间为当前时间
+                    postParam.setExecuteTime(System.currentTimeMillis());
+                    postParam.setEndTime(System.currentTimeMillis());
+                    postParam.setExecStatus(ExecStatus.COMPLETED.name());
+                    postHandleReport(postParam, true);
+                }
+                preReportMap.put(plan.getId(), preReport.getId());
+            });
+        } catch (Exception e) {
+            LogUtils.error("Generate report exception: " + e.getMessage());
+        }
+
+        return preReportMap;
     }
 
-	/**
-	 * 预生成报告内容(汇总前调用)
-	 * @return 报告
-	 */
-	public TestPlanReport preGenReport(String prepareId,TestPlanReportGenPreParam genParam, String currentUser, String logPath, TestPlanReportModuleParam moduleParam, List<String> childPlanIds) {
-		// 计划配置
-		TestPlanConfig config = testPlanConfigMapper.selectByPrimaryKey(genParam.getTestPlanId());
+    /**
+     * 预生成报告内容(汇总前调用)
+     *
+     * @return 报告
+     */
+    public TestPlanReport preGenReport(String prepareId, TestPlanReportGenPreParam genParam, String currentUser, TestPlanReportModuleParam moduleParam, List<String> childPlanIds) {
+        // 计划配置
+        TestPlanConfig config = testPlanConfigMapper.selectByPrimaryKey(genParam.getTestPlanId());
 
         /*
          * 预生成报告
@@ -308,134 +361,143 @@ public class TestPlanReportService {
         report.setDeleted(false);
         report.setPassThreshold(config == null ? null : config.getPassThreshold());
         report.setParentId(genParam.getGroupReportId());
+        report.setTestPlanName(genParam.getTestPlanName());
         testPlanReportMapper.insertSelective(report);
 
-		TestPlanReportDetailCaseDTO reportCaseDetail;
-		if (!genParam.getIntegrated()) {
-			// 生成独立报告的关联数据
-			reportCaseDetail = genReportDetail(genParam, moduleParam, report);
-		} else {
-			// 计划组报告暂不统计各用例类型, 汇总时再入库
-			reportCaseDetail = TestPlanReportDetailCaseDTO.builder().build();
-		}
-		// 报告统计内容
-		TestPlanReportSummary reportSummary = new TestPlanReportSummary();
-		reportSummary.setId(IDGenerator.nextStr());
-		reportSummary.setTestPlanReportId(report.getId());
-		reportSummary.setFunctionalCaseCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getFunctionCases()) ? 0 : reportCaseDetail.getFunctionCases().size()));
-		reportSummary.setApiCaseCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getApiCases()) ? 0 : reportCaseDetail.getApiCases().size()));
-		reportSummary.setApiScenarioCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getApiScenarios()) ? 0 : reportCaseDetail.getApiScenarios().size()));
-		reportSummary.setBugCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getBugs()) ? 0 : reportCaseDetail.getBugs().size()));
-		reportSummary.setPlanCount(genParam.getIntegrated() ? (long) childPlanIds.size() : 0);
-		testPlanReportSummaryMapper.insertSelective(reportSummary);
+        TestPlanReportDetailCaseDTO reportCaseDetail;
+        if (!genParam.getIntegrated()) {
+            // 生成独立报告的关联数据
+            reportCaseDetail = genReportDetail(genParam, moduleParam, report);
+        } else {
+            // 计划组报告暂不统计各用例类型, 汇总时再入库
+            reportCaseDetail = TestPlanReportDetailCaseDTO.builder().build();
+        }
+        // 报告统计内容
+        TestPlanReportSummary reportSummary = new TestPlanReportSummary();
+        reportSummary.setId(IDGenerator.nextStr());
+        reportSummary.setTestPlanReportId(report.getId());
+        reportSummary.setFunctionalCaseCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getFunctionCases()) ? 0 : reportCaseDetail.getFunctionCases().size()));
+        reportSummary.setApiCaseCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getApiCases()) ? 0 : reportCaseDetail.getApiCases().size()));
+        reportSummary.setApiScenarioCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getApiScenarios()) ? 0 : reportCaseDetail.getApiScenarios().size()));
+        reportSummary.setBugCount((long) (CollectionUtils.isEmpty(reportCaseDetail.getBugs()) ? 0 : reportCaseDetail.getBugs().size()));
+        reportSummary.setPlanCount(genParam.getIntegrated() ? (long) childPlanIds.size() : 0);
+        testPlanReportSummaryMapper.insertSelective(reportSummary);
 
         // 报告日志
-        testPlanReportLogService.addLog(report, currentUser, genParam.getProjectId(), logPath);
+        testPlanReportLogService.addLog(report, currentUser, genParam.getProjectId());
         return report;
     }
 
-	/**
-	 * 生成独立报告的关联数据
-	 * @param genParam 报告生成的参数
-	 * @param moduleParam 模块参数
-	 * @param report 报告
-	 */
-	private TestPlanReportDetailCaseDTO genReportDetail(TestPlanReportGenPreParam genParam, TestPlanReportModuleParam moduleParam, TestPlanReport report) {
-		SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
-		// 功能用例
-		List<TestPlanReportFunctionCase> reportFunctionCases = extTestPlanReportFunctionalCaseMapper.getPlanExecuteCases(genParam.getTestPlanId());
-		if (CollectionUtils.isNotEmpty(reportFunctionCases)) {
-			// 用例等级
-			List<String> ids = reportFunctionCases.stream().map(TestPlanReportFunctionCase::getFunctionCaseId).distinct().toList();
-			List<SelectOption> options = extTestPlanReportFunctionalCaseMapper.getCasePriorityByIds(ids);
-			Map<String, String> casePriorityMap = options.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
-			// 关联的功能用例最新一次执行历史
-			List<String> relateIds = reportFunctionCases.stream().map(TestPlanReportFunctionCase::getTestPlanFunctionCaseId).toList();
-			TestPlanCaseExecuteHistoryExample example = new TestPlanCaseExecuteHistoryExample();
-			example.createCriteria().andTestPlanCaseIdIn(relateIds);
-			List<TestPlanCaseExecuteHistory> functionalExecHisList = testPlanCaseExecuteHistoryMapper.selectByExample(example);
-			Map<String, List<TestPlanCaseExecuteHistory>> functionalExecMap = functionalExecHisList.stream().collect(Collectors.groupingBy(TestPlanCaseExecuteHistory::getTestPlanCaseId));
+    /**
+     * 生成独立报告的关联数据
+     *
+     * @param genParam    报告生成的参数
+     * @param moduleParam 模块参数
+     * @param report      报告
+     */
+    private TestPlanReportDetailCaseDTO genReportDetail(TestPlanReportGenPreParam genParam, TestPlanReportModuleParam moduleParam, TestPlanReport report) {
+        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+        // 功能用例
+        List<TestPlanReportFunctionCase> reportFunctionCases = extTestPlanReportFunctionalCaseMapper.getPlanExecuteCases(genParam.getTestPlanId());
+        if (CollectionUtils.isNotEmpty(reportFunctionCases)) {
+            // 用例等级
+            List<String> ids = reportFunctionCases.stream().map(TestPlanReportFunctionCase::getFunctionCaseId).distinct().toList();
+            List<SelectOption> options = extTestPlanReportFunctionalCaseMapper.getCasePriorityByIds(ids);
+            Map<String, String> casePriorityMap = options.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
+            // 关联的功能用例最新一次执行历史
+            List<String> relateIds = reportFunctionCases.stream().map(TestPlanReportFunctionCase::getTestPlanFunctionCaseId).toList();
+            TestPlanCaseExecuteHistoryExample example = new TestPlanCaseExecuteHistoryExample();
+            example.createCriteria().andTestPlanCaseIdIn(relateIds);
+            List<TestPlanCaseExecuteHistory> functionalExecHisList = testPlanCaseExecuteHistoryMapper.selectByExample(example);
+            Map<String, List<TestPlanCaseExecuteHistory>> functionalExecMap = functionalExecHisList.stream().collect(Collectors.groupingBy(TestPlanCaseExecuteHistory::getTestPlanCaseId));
 
 
-			reportFunctionCases.forEach(reportFunctionalCase -> {
-				reportFunctionalCase.setId(IDGenerator.nextStr());
-				reportFunctionalCase.setTestPlanReportId(report.getId());
-				reportFunctionalCase.setFunctionCaseModule(moduleParam.getFunctionalModuleMap().getOrDefault(reportFunctionalCase.getFunctionCaseModule(),
-						ModuleTreeUtils.MODULE_PATH_PREFIX + reportFunctionalCase.getFunctionCaseModule()));
-				reportFunctionalCase.setFunctionCasePriority(casePriorityMap.get(reportFunctionalCase.getFunctionCaseId()));
-				List<TestPlanCaseExecuteHistory> hisList = functionalExecMap.get(reportFunctionalCase.getTestPlanFunctionCaseId());
-				if (CollectionUtils.isNotEmpty(hisList)) {
-					Optional<String> lastExecuteHisOpt = hisList.stream().sorted(Comparator.comparing(TestPlanCaseExecuteHistory::getCreateTime).reversed()).map(TestPlanCaseExecuteHistory::getId).findFirst();
-					reportFunctionalCase.setFunctionCaseExecuteReportId(lastExecuteHisOpt.orElse(null));
-				} else {
-					reportFunctionalCase.setFunctionCaseExecuteReportId(null);
-				}
-			});
-			// 插入计划功能用例关联数据 -> 报告内容
-			TestPlanReportFunctionCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportFunctionCaseMapper.class);
-			batchMapper.batchInsert(reportFunctionCases);
-		}
+            reportFunctionCases.forEach(reportFunctionalCase -> {
+                reportFunctionalCase.setId(IDGenerator.nextStr());
+                reportFunctionalCase.setTestPlanReportId(report.getId());
+                reportFunctionalCase.setTestPlanName(genParam.getTestPlanName());
+                reportFunctionalCase.setFunctionCaseModule(moduleParam.getFunctionalModuleMap().getOrDefault(reportFunctionalCase.getFunctionCaseModule(),
+                        ModuleTreeUtils.MODULE_PATH_PREFIX + reportFunctionalCase.getFunctionCaseModule()));
+                reportFunctionalCase.setFunctionCasePriority(casePriorityMap.get(reportFunctionalCase.getFunctionCaseId()));
+                List<TestPlanCaseExecuteHistory> hisList = functionalExecMap.get(reportFunctionalCase.getTestPlanFunctionCaseId());
+                if (CollectionUtils.isNotEmpty(hisList)) {
+                    Optional<String> lastExecuteHisOpt = hisList.stream().sorted(Comparator.comparing(TestPlanCaseExecuteHistory::getCreateTime).reversed()).map(TestPlanCaseExecuteHistory::getId).findFirst();
+                    reportFunctionalCase.setFunctionCaseExecuteReportId(lastExecuteHisOpt.orElse(null));
+                } else {
+                    reportFunctionalCase.setFunctionCaseExecuteReportId(null);
+                }
+            });
+            // 插入计划功能用例关联数据 -> 报告内容
+            TestPlanReportFunctionCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportFunctionCaseMapper.class);
+            batchMapper.batchInsert(reportFunctionCases);
+        }
 
-		// 接口用例
-		List<TestPlanReportApiCase> reportApiCases = extTestPlanReportApiCaseMapper.getPlanExecuteCases(genParam.getTestPlanId());
-		if (CollectionUtils.isNotEmpty(reportApiCases)) {
-			reportApiCases.forEach(reportApiCase -> {
-				reportApiCase.setId(IDGenerator.nextStr());
-				reportApiCase.setTestPlanReportId(report.getId());
-				reportApiCase.setApiCaseModule(moduleParam.getApiModuleMap().getOrDefault(reportApiCase.getApiCaseModule(),
-						ModuleTreeUtils.MODULE_PATH_PREFIX + reportApiCase.getApiCaseModule()));
-				if (!genParam.getUseManual()) {
-					// 接口执行时才更新结果
-					reportApiCase.setApiCaseExecuteResult(null);
-					reportApiCase.setApiCaseExecuteUser(null);
-					reportApiCase.setApiCaseExecuteReportId(IDGenerator.nextStr());
-				}
-			});
-			// 插入计划接口用例关联数据 -> 报告内容
-			TestPlanReportApiCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportApiCaseMapper.class);
-			batchMapper.batchInsert(reportApiCases);
-		}
+        // 接口用例
+        List<TestPlanReportApiCase> reportApiCases = extTestPlanReportApiCaseMapper.getPlanExecuteCases(genParam.getTestPlanId());
+        if (CollectionUtils.isNotEmpty(reportApiCases)) {
+            reportApiCases.forEach(reportApiCase -> {
+                reportApiCase.setId(IDGenerator.nextStr());
+                reportApiCase.setTestPlanReportId(report.getId());
+                reportApiCase.setTestPlanName(genParam.getTestPlanName());
+                reportApiCase.setApiCaseModule(moduleParam.getApiModuleMap().getOrDefault(reportApiCase.getApiCaseModule(),
+                        ModuleTreeUtils.MODULE_PATH_PREFIX + reportApiCase.getApiCaseModule()));
+                //根据不超过数据库字段最大长度压缩模块名
+                reportApiCase.setApiCaseModule(ServiceUtils.compressName(reportApiCase.getApiCaseModule(), 450));
+                if (!genParam.getUseManual()) {
+                    // 接口执行时才更新结果
+                    reportApiCase.setApiCaseExecuteResult(null);
+                    reportApiCase.setApiCaseExecuteUser(null);
+                    reportApiCase.setApiCaseExecuteReportId(IDGenerator.nextStr());
+                }
+            });
+            // 插入计划接口用例关联数据 -> 报告内容
+            TestPlanReportApiCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportApiCaseMapper.class);
+            batchMapper.batchInsert(reportApiCases);
+        }
 
-		// 场景用例
-		List<TestPlanReportApiScenario> reportApiScenarios = extTestPlanReportApiScenarioMapper.getPlanExecuteCases(genParam.getTestPlanId());
-		if (CollectionUtils.isNotEmpty(reportApiScenarios)) {
-			reportApiScenarios.forEach(reportApiScenario -> {
-				reportApiScenario.setId(IDGenerator.nextStr());
-				reportApiScenario.setTestPlanReportId(report.getId());
-				reportApiScenario.setApiScenarioModule(moduleParam.getScenarioModuleMap().getOrDefault(reportApiScenario.getApiScenarioModule(),
-						ModuleTreeUtils.MODULE_PATH_PREFIX + reportApiScenario.getApiScenarioModule()));
-				if (!genParam.getUseManual()) {
-					// 接口执行时才更新结果
-					reportApiScenario.setApiScenarioExecuteResult(null);
-					reportApiScenario.setApiScenarioExecuteUser(null);
-					reportApiScenario.setApiScenarioExecuteReportId(IDGenerator.nextStr());
-				}
-			});
-			// 插入计划场景用例关联数据 -> 报告内容
-			TestPlanReportApiScenarioMapper batchMapper = sqlSession.getMapper(TestPlanReportApiScenarioMapper.class);
-			batchMapper.batchInsert(reportApiScenarios);
-		}
+        // 场景用例
+        List<TestPlanReportApiScenario> reportApiScenarios = extTestPlanReportApiScenarioMapper.getPlanExecuteCases(genParam.getTestPlanId());
+        if (CollectionUtils.isNotEmpty(reportApiScenarios)) {
+            reportApiScenarios.forEach(reportApiScenario -> {
+                reportApiScenario.setId(IDGenerator.nextStr());
+                reportApiScenario.setTestPlanReportId(report.getId());
+                reportApiScenario.setTestPlanName(genParam.getTestPlanName());
+                reportApiScenario.setApiScenarioModule(moduleParam.getScenarioModuleMap().getOrDefault(reportApiScenario.getApiScenarioModule(),
+                        ModuleTreeUtils.MODULE_PATH_PREFIX + reportApiScenario.getApiScenarioModule()));
+                //根据不超过数据库字段最大长度压缩模块名
+                reportApiScenario.setApiScenarioModule(ServiceUtils.compressName(reportApiScenario.getApiScenarioModule(), 450));
+                if (!genParam.getUseManual()) {
+                    // 接口执行时才更新结果
+                    reportApiScenario.setApiScenarioExecuteResult(null);
+                    reportApiScenario.setApiScenarioExecuteUser(null);
+                    reportApiScenario.setApiScenarioExecuteReportId(IDGenerator.nextStr());
+                }
+            });
+            // 插入计划场景用例关联数据 -> 报告内容
+            TestPlanReportApiScenarioMapper batchMapper = sqlSession.getMapper(TestPlanReportApiScenarioMapper.class);
+            batchMapper.batchInsert(reportApiScenarios);
+        }
 
-		// 计划报告缺陷内容
-		List<TestPlanReportBug> reportBugs = extTestPlanReportBugMapper.getPlanBugs(genParam.getTestPlanId());
-		if (CollectionUtils.isNotEmpty(reportBugs)) {
-			// MS处理人会与第三方的值冲突, 分开查询
-			List<SelectOption> headerOptions = bugCommonService.getHeaderHandlerOption(genParam.getProjectId());
-			Map<String, String> headerHandleUserMap = headerOptions.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
-			List<SelectOption> localOptions = bugCommonService.getLocalHandlerOption(genParam.getProjectId());
-			Map<String, String> localHandleUserMap = localOptions.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
-			Map<String, String> allStatusMap = bugCommonService.getAllStatusMap(genParam.getProjectId());
-			reportBugs.forEach(reportBug -> {
-				reportBug.setId(IDGenerator.nextStr());
-				reportBug.setTestPlanReportId(report.getId());
-				reportBug.setBugHandleUser(headerHandleUserMap.containsKey(reportBug.getBugHandleUser()) ?
-						headerHandleUserMap.get(reportBug.getBugHandleUser()) : localHandleUserMap.get(reportBug.getBugHandleUser()));
-				reportBug.setBugStatus(allStatusMap.get(reportBug.getBugStatus()));
-			});
-			// 插入计划关联用例缺陷数据(去重) -> 报告内容
-			TestPlanReportBugMapper batchMapper = sqlSession.getMapper(TestPlanReportBugMapper.class);
-			batchMapper.batchInsert(reportBugs);
-		}
+        // 计划报告缺陷内容
+        List<TestPlanReportBug> reportBugs = extTestPlanReportBugMapper.getPlanBugs(genParam.getTestPlanId());
+        if (CollectionUtils.isNotEmpty(reportBugs)) {
+            // MS处理人会与第三方的值冲突, 分开查询
+            List<SelectOption> headerOptions = bugCommonService.getHeaderHandlerOption(genParam.getProjectId());
+            Map<String, String> headerHandleUserMap = headerOptions.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
+            List<SelectOption> localOptions = bugCommonService.getLocalHandlerOption(genParam.getProjectId());
+            Map<String, String> localHandleUserMap = localOptions.stream().collect(Collectors.toMap(SelectOption::getValue, SelectOption::getText));
+            Map<String, String> allStatusMap = bugCommonService.getAllStatusMap(genParam.getProjectId());
+            reportBugs.forEach(reportBug -> {
+                reportBug.setId(IDGenerator.nextStr());
+                reportBug.setTestPlanReportId(report.getId());
+                reportBug.setBugHandleUser(headerHandleUserMap.containsKey(reportBug.getBugHandleUser()) ?
+                        headerHandleUserMap.get(reportBug.getBugHandleUser()) : localHandleUserMap.get(reportBug.getBugHandleUser()));
+                reportBug.setBugStatus(allStatusMap.get(reportBug.getBugStatus()));
+            });
+            // 插入计划关联用例缺陷数据(去重) -> 报告内容
+            TestPlanReportBugMapper batchMapper = sqlSession.getMapper(TestPlanReportBugMapper.class);
+            batchMapper.batchInsert(reportBugs);
+        }
 
         sqlSession.flushStatements();
         SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
@@ -461,35 +523,36 @@ public class TestPlanReportService {
          */
         TestPlanReportSummaryExample example = new TestPlanReportSummaryExample();
         example.createCriteria().andTestPlanReportIdEqualTo(postParam.getReportId());
-        TestPlanReportSummary reportSummary = testPlanReportSummaryMapper.selectByExampleWithBLOBs(example).get(0);
+        TestPlanReportSummary reportSummary = testPlanReportSummaryMapper.selectByExampleWithBLOBs(example).getFirst();
         // 用例总数
         long caseTotal = reportSummary.getFunctionalCaseCount() + reportSummary.getApiCaseCount() + reportSummary.getApiScenarioCount();
         CaseCount summaryCount = JSON.parseObject(new String(reportSummary.getExecuteResult()), CaseCount.class);
         planReport.setExecuteRate(RateCalculateUtils.divWithPrecision(((int) caseTotal - summaryCount.getPending()), (int) caseTotal, 2));
         planReport.setPassRate(RateCalculateUtils.divWithPrecision(summaryCount.getSuccess(), (int) caseTotal, 2));
-		if (planReport.getIntegrated()) {
-			// 计划组的(执行)结果状态: 子计划全部成功 ? 成功 : 失败
-			TestPlanReportExample reportExample = new TestPlanReportExample();
-			reportExample.createCriteria().andParentIdEqualTo(postParam.getReportId()).andIntegratedEqualTo(false).andResultStatusNotEqualTo(ReportStatus.SUCCESS.name());
-			planReport.setResultStatus(testPlanReportMapper.countByExample(reportExample) == 0 ? ReportStatus.SUCCESS.name() : ReportStatus.ERROR.name());
-		} else {
-			// 计划的(执行)结果状态: 通过率 >= 阈值 ? 成功 : 失败
-			planReport.setResultStatus(planReport.getPassRate() >= planReport.getPassThreshold() ? ReportStatus.SUCCESS.name() : ReportStatus.ERROR.name());
-		}
+        if (planReport.getIntegrated()) {
+            // 计划组的(执行)结果状态: 子计划全部成功 ? 成功 : 失败
+            TestPlanReportExample reportExample = new TestPlanReportExample();
+            reportExample.createCriteria().andParentIdEqualTo(postParam.getReportId()).andIntegratedEqualTo(false).andResultStatusNotEqualTo(ResultStatus.SUCCESS.name());
+            planReport.setResultStatus(testPlanReportMapper.countByExample(reportExample) == 0 ? ResultStatus.SUCCESS.name() : ResultStatus.ERROR.name());
+        } else {
+            // 计划的(执行)结果状态: 通过率 >= 阈值 ? 成功 : 失败
+            planReport.setResultStatus(planReport.getPassRate() >= planReport.getPassThreshold() ? ResultStatus.SUCCESS.name() : ResultStatus.ERROR.name());
+        }
 
         testPlanReportMapper.updateByPrimaryKeySelective(planReport);
 
-		// 发送计划执行通知
-		if (!useManual) {
-			testPlanSendNoticeService.sendExecuteNotice(planReport.getCreateUser(), planReport.getTestPlanId(), planReport.getProjectId(), planReport.getResultStatus());
-		}
+        // 发送计划执行通知
+        if (!useManual) {
+            testPlanSendNoticeService.sendExecuteNotice(planReport.getCreateUser(), planReport.getTestPlanId(), planReport.getProjectId(), planReport.getResultStatus(), planReport.getTriggerMode());
+        }
     }
 
-	/**
-	 * 获取报告
-	 * @param reportId 报告ID
-	 * @return 报告详情
-	 */
+    /**
+     * 获取报告
+     *
+     * @param reportId 报告ID
+     * @return 报告详情
+     */
     public TestPlanReport selectById(String reportId) {
         return testPlanReportMapper.selectByPrimaryKey(reportId);
     }
@@ -504,29 +567,29 @@ public class TestPlanReportService {
         TestPlanReport planReport = checkReport(reportId);
         TestPlanReportSummaryExample example = new TestPlanReportSummaryExample();
         example.createCriteria().andTestPlanReportIdEqualTo(reportId);
-		List<TestPlanReportSummary> testPlanReportSummaries = testPlanReportSummaryMapper.selectByExampleWithBLOBs(example);
-		if (CollectionUtils.isEmpty(testPlanReportSummaries)) {
-			throw new MSException(Translator.get("test_plan_report_detail_not_exist"));
-		}
-		TestPlanReportSummary reportSummary = testPlanReportSummaries.get(0);
+        List<TestPlanReportSummary> testPlanReportSummaries = testPlanReportSummaryMapper.selectByExampleWithBLOBs(example);
+        if (CollectionUtils.isEmpty(testPlanReportSummaries)) {
+            throw new MSException(Translator.get("test_plan_report_detail_not_exist"));
+        }
+        TestPlanReportSummary reportSummary = testPlanReportSummaries.getFirst();
         TestPlanReportDetailResponse planReportDetail = new TestPlanReportDetailResponse();
         BeanUtils.copyBean(planReportDetail, planReport);
         int caseTotal = (int) (reportSummary.getFunctionalCaseCount() + reportSummary.getApiCaseCount() + reportSummary.getApiScenarioCount());
         planReportDetail.setCaseTotal(caseTotal);
         planReportDetail.setBugCount(reportSummary.getBugCount().intValue());
-		// 暂时只有功能用例能关联缺陷
-		Long functionalBugCount = extTestPlanReportFunctionalCaseMapper.countBug(reportId);
-		planReportDetail.setFunctionalBugCount(functionalBugCount == null ? 0 : functionalBugCount.intValue());
-		if (planReport.getIntegrated()) {
-			// 计划组报告, 需要统计计划的执行数据
-			planReportDetail.setPlanCount(reportSummary.getPlanCount().intValue());
-			TestPlanReportExample reportExample = new TestPlanReportExample();
-			reportExample.createCriteria().andParentIdEqualTo(reportId);
-			List<TestPlanReport> testPlanReports = testPlanReportMapper.selectByExample(reportExample);
-			long planPassCount = testPlanReports.stream().filter(report -> StringUtils.equals(ExecStatus.SUCCESS.name(), report.getResultStatus())).count();
-			planReportDetail.setPassCountOfPlan((int) planPassCount);
-			planReportDetail.setFailCountOfPlan(planReportDetail.getPlanCount() - planReportDetail.getPassCountOfPlan());
-		}
+        // 暂时只有功能用例能关联缺陷
+        Long functionalBugCount = extTestPlanReportFunctionalCaseMapper.countBug(reportId);
+        planReportDetail.setFunctionalBugCount(functionalBugCount == null ? 0 : functionalBugCount.intValue());
+        if (planReport.getIntegrated()) {
+            // 计划组报告, 需要统计计划的执行数据
+            planReportDetail.setPlanCount(reportSummary.getPlanCount().intValue());
+            TestPlanReportExample reportExample = new TestPlanReportExample();
+            reportExample.createCriteria().andParentIdEqualTo(reportId).andIntegratedEqualTo(false);
+            List<TestPlanReport> testPlanReports = testPlanReportMapper.selectByExample(reportExample);
+            long planPassCount = testPlanReports.stream().filter(report -> StringUtils.equals(ResultStatus.SUCCESS.name(), report.getResultStatus())).count();
+            planReportDetail.setPassCountOfPlan((int) planPassCount);
+            planReportDetail.setFailCountOfPlan(planReportDetail.getPlanCount() - planReportDetail.getPassCountOfPlan());
+        }
         planReportDetail.setSummary(reportSummary.getSummary());
         /*
          * 统计用例执行数据
@@ -538,6 +601,12 @@ public class TestPlanReportService {
         return planReportDetail;
     }
 
+    public List<TestPlanReportComponent> getLayout(String reportId) {
+        TestPlanReportComponentExample example = new TestPlanReportComponentExample();
+        example.createCriteria().andTestPlanReportIdEqualTo(reportId);
+        return componentMapper.selectByExampleWithBLOBs(example);
+    }
+
     /**
      * 更新报告详情
      *
@@ -546,11 +615,20 @@ public class TestPlanReportService {
      */
     public TestPlanReportDetailResponse edit(TestPlanReportDetailEditRequest request, String currentUser) {
         TestPlanReport planReport = checkReport(request.getId());
-        TestPlanReportSummary reportSummary = new TestPlanReportSummary();
-        reportSummary.setSummary(StringUtils.isBlank(request.getSummary()) ? StringUtils.EMPTY : request.getSummary());
-        TestPlanReportSummaryExample example = new TestPlanReportSummaryExample();
-        example.createCriteria().andTestPlanReportIdEqualTo(planReport.getId());
-        testPlanReportSummaryMapper.updateByExampleSelective(reportSummary, example);
+        if (planReport.getDefaultLayout()) {
+            // 默认布局只存在报告总结
+            TestPlanReportSummary reportSummary = new TestPlanReportSummary();
+            reportSummary.setSummary(StringUtils.isBlank(request.getComponentValue()) ? StringUtils.EMPTY : request.getComponentValue());
+            TestPlanReportSummaryExample example = new TestPlanReportSummaryExample();
+            example.createCriteria().andTestPlanReportIdEqualTo(planReport.getId());
+            testPlanReportSummaryMapper.updateByExampleSelective(reportSummary, example);
+        } else {
+            // 手动生成的布局, 只更新富文本组件的内容
+            TestPlanReportComponent record = new TestPlanReportComponent();
+            record.setId(request.getComponentId());
+            record.setValue(request.getComponentValue());
+            componentMapper.updateByPrimaryKeySelective(record);
+        }
         // 处理富文本文件
         transferRichTextTmpFile(request.getId(), planReport.getProjectId(), request.getRichTextTmpFileIds(), currentUser, TestPlanReportAttachmentSourceType.RICH_TEXT.name());
         return getReport(planReport.getId());
@@ -566,24 +644,41 @@ public class TestPlanReportService {
         return extTestPlanReportBugMapper.list(request);
     }
 
-	/**
-	 * 分页查询报告详情-用例分页数据
-	 * @param request 请求参数
-	 * @return 用例分页数据
-	 */
-	public List<ReportDetailCasePageDTO> listReportDetailCases(TestPlanReportDetailPageRequest request, String caseType) {
-		List<ReportDetailCasePageDTO> detailCases;
-		switch (caseType) {
-			case AssociateCaseType.FUNCTIONAL ->  detailCases = extTestPlanReportFunctionalCaseMapper.list(request);
-			case AssociateCaseType.API_CASE -> detailCases = extTestPlanReportApiCaseMapper.list(request);
-			case AssociateCaseType.API_SCENARIO -> detailCases = extTestPlanReportApiScenarioMapper.list(request);
-			default -> detailCases = new ArrayList<>();
-		}
-		List<String> distinctUserIds = detailCases.stream().map(ReportDetailCasePageDTO::getExecuteUser).distinct().toList();
-		Map<String, String> userMap = getUserMap(distinctUserIds);
-		detailCases.forEach(detailCase -> detailCase.setExecuteUser(userMap.getOrDefault(detailCase.getExecuteUser(), detailCase.getExecuteUser())));
-		return detailCases;
-	}
+    /**
+     * 分页查询报告详情-用例分页数据
+     *
+     * @param request 请求参数
+     * @return 用例分页数据
+     */
+    public List<ReportDetailCasePageDTO> listReportDetailCases(TestPlanReportDetailPageRequest request, String caseType) {
+        List<ReportDetailCasePageDTO> detailCases;
+        switch (caseType) {
+            case AssociateCaseType.FUNCTIONAL -> detailCases = extTestPlanReportFunctionalCaseMapper.list(request);
+            case AssociateCaseType.API_CASE -> detailCases = extTestPlanReportApiCaseMapper.list(request);
+            case AssociateCaseType.API_SCENARIO -> detailCases = extTestPlanReportApiScenarioMapper.list(request);
+            default -> detailCases = new ArrayList<>();
+        }
+        List<String> distinctUserIds = detailCases.stream().map(ReportDetailCasePageDTO::getExecuteUser).distinct().toList();
+        Map<String, String> userMap = getUserMap(distinctUserIds);
+        detailCases.forEach(detailCase -> detailCase.setExecuteUser(userMap.getOrDefault(detailCase.getExecuteUser(), detailCase.getExecuteUser())));
+        return detailCases;
+    }
+
+    /**
+     * 返回功能用例执行结果
+     * @param executeHisId 执行历史ID
+     * @return 执行结果
+     */
+    public TestPlanCaseExecHistoryResponse getFunctionalExecuteResult(String executeHisId) {
+        TestPlanCaseExecHistoryResponse singleExecHistory = extTestPlanCaseExecuteHistoryMapper.getSingleExecHistory(executeHisId);
+        if (singleExecHistory.getContent() != null) {
+            singleExecHistory.setContentText(new String(singleExecHistory.getContent(), StandardCharsets.UTF_8));
+        }
+        if (singleExecHistory.getSteps() != null) {
+            singleExecHistory.setStepsExecResult(new String(singleExecHistory.getSteps(), StandardCharsets.UTF_8));
+        }
+        return singleExecHistory;
+    }
 
     /**
      * 汇总生成的计划报告
@@ -616,7 +711,7 @@ public class TestPlanReportService {
                 .fakeError(functionalCaseCount.getFakeError() + apiCaseCount.getFakeError() + scenarioCaseCount.getFakeError()).build();
 
         // 入库汇总数据 => 报告详情表
-        TestPlanReportSummary reportSummary = testPlanReportSummaries.get(0);
+        TestPlanReportSummary reportSummary = testPlanReportSummaries.getFirst();
         reportSummary.setFunctionalExecuteResult(JSON.toJSONBytes(functionalCaseCount));
         reportSummary.setApiExecuteResult(JSON.toJSONBytes(apiCaseCount));
         reportSummary.setScenarioExecuteResult(JSON.toJSONBytes(scenarioCaseCount));
@@ -624,116 +719,117 @@ public class TestPlanReportService {
         testPlanReportSummaryMapper.updateByPrimaryKeySelective(reportSummary);
     }
 
-	/**
-	 * 汇总生成的计划组报告
-	 * @param reportId 报告ID
-	 */
-	public void summaryGroupReport(String reportId) {
-		TestPlanReportSummaryExample summaryExample = new TestPlanReportSummaryExample();
-		summaryExample.createCriteria().andTestPlanReportIdEqualTo(reportId);
-		List<TestPlanReportSummary> testPlanReportSummaries = testPlanReportSummaryMapper.selectByExample(summaryExample);
-		if (CollectionUtils.isEmpty(testPlanReportSummaries)) {
-			// 报告详情不存在
-			return;
-		}
-		TestPlanReportSummary groupSummary = testPlanReportSummaries.get(0);
+    /**
+     * 汇总生成的计划组报告
+     *
+     * @param reportId 报告ID
+     */
+    public void summaryGroupReport(String reportId) {
+        TestPlanReportSummaryExample summaryExample = new TestPlanReportSummaryExample();
+        summaryExample.createCriteria().andTestPlanReportIdEqualTo(reportId);
+        List<TestPlanReportSummary> testPlanReportSummaries = testPlanReportSummaryMapper.selectByExample(summaryExample);
+        if (CollectionUtils.isEmpty(testPlanReportSummaries)) {
+            // 报告详情不存在
+            return;
+        }
+        TestPlanReportSummary groupSummary = testPlanReportSummaries.getFirst();
 
-		TestPlanReportExample example = new TestPlanReportExample();
-		example.createCriteria().andParentIdEqualTo(reportId).andIntegratedEqualTo(false);
-		List<TestPlanReport> testPlanReports = testPlanReportMapper.selectByExample(example);
-        if(CollectionUtils.isEmpty(testPlanReports)){
-			// 不存在子报告, 不需要汇总数据
+        TestPlanReportExample example = new TestPlanReportExample();
+        example.createCriteria().andParentIdEqualTo(reportId).andIntegratedEqualTo(false);
+        List<TestPlanReport> testPlanReports = testPlanReportMapper.selectByExample(example);
+        if (CollectionUtils.isEmpty(testPlanReports)) {
+            // 不存在子报告, 不需要汇总数据
             return;
         }
 
-		// 汇总子报告关联的数据并入库
-		SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
-		List<String> ids = testPlanReports.stream().map(TestPlanReport::getId).toList();
-		// 功能用例
-		TestPlanReportFunctionCaseExample functionCaseExample = new TestPlanReportFunctionCaseExample();
-		functionCaseExample.createCriteria().andTestPlanReportIdIn(ids);
-		List<TestPlanReportFunctionCase> reportFunctionCases = testPlanReportFunctionCaseMapper.selectByExample(functionCaseExample);
-		if (CollectionUtils.isNotEmpty(reportFunctionCases)) {
-			groupSummary.setFunctionalCaseCount((long) reportFunctionCases.size());
-			reportFunctionCases.forEach(reportFunctionCase -> {
-				reportFunctionCase.setId(IDGenerator.nextStr());
-				reportFunctionCase.setTestPlanReportId(reportId);
-			});
-			// 插入计划组报告, 功能用例关联数据
-			TestPlanReportFunctionCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportFunctionCaseMapper.class);
-			batchMapper.batchInsert(reportFunctionCases);
-		}
-		// 接口用例
-		TestPlanReportApiCaseExample apiCaseExample = new TestPlanReportApiCaseExample();
-		apiCaseExample.createCriteria().andTestPlanReportIdIn(ids);
-		List<TestPlanReportApiCase> reportApiCases = testPlanReportApiCaseMapper.selectByExample(apiCaseExample);
-		if (CollectionUtils.isNotEmpty(reportApiCases)) {
-			groupSummary.setApiCaseCount((long) reportApiCases.size());
-			reportApiCases.forEach(reportApiCase -> {
-				reportApiCase.setId(IDGenerator.nextStr());
-				reportApiCase.setTestPlanReportId(reportId);
-			});
-			// 插入计划组报告, 接口用例关联数据
-			TestPlanReportApiCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportApiCaseMapper.class);
-			batchMapper.batchInsert(reportApiCases);
-		}
-		// 场景用例
-		TestPlanReportApiScenarioExample scenarioExample = new TestPlanReportApiScenarioExample();
-		scenarioExample.createCriteria().andTestPlanReportIdIn(ids);
-		List<TestPlanReportApiScenario> reportApiScenarios = testPlanReportApiScenarioMapper.selectByExample(scenarioExample);
-		if (CollectionUtils.isNotEmpty(reportApiScenarios)) {
-			groupSummary.setApiScenarioCount((long) reportApiScenarios.size());
-			reportApiScenarios.forEach(reportApiScenario -> {
-				reportApiScenario.setId(IDGenerator.nextStr());
-				reportApiScenario.setTestPlanReportId(reportId);
-			});
-			// 插入计划组报告, 场景用例关联数据
-			TestPlanReportApiScenarioMapper batchMapper = sqlSession.getMapper(TestPlanReportApiScenarioMapper.class);
-			batchMapper.batchInsert(reportApiScenarios);
-		}
-		// 缺陷明细
-		TestPlanReportBugExample bugExample = new TestPlanReportBugExample();
-		bugExample.createCriteria().andTestPlanReportIdIn(ids);
-		List<TestPlanReportBug> reportBugs = testPlanReportBugMapper.selectByExample(bugExample);
-		if (CollectionUtils.isNotEmpty(reportBugs)) {
-			groupSummary.setBugCount((long) reportBugs.size());
-			reportBugs.forEach(reportBug -> {
-				reportBug.setId(IDGenerator.nextStr());
-				reportBug.setTestPlanReportId(reportId);
-			});
-			// 插入计划组关联用例缺陷数据
-			TestPlanReportBugMapper batchMapper = sqlSession.getMapper(TestPlanReportBugMapper.class);
-			batchMapper.batchInsert(reportBugs);
-		}
-		sqlSession.flushStatements();
-		SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
+        // 汇总子报告关联的数据并入库
+        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+        List<String> ids = testPlanReports.stream().map(TestPlanReport::getId).toList();
+        // 功能用例
+        TestPlanReportFunctionCaseExample functionCaseExample = new TestPlanReportFunctionCaseExample();
+        functionCaseExample.createCriteria().andTestPlanReportIdIn(ids);
+        List<TestPlanReportFunctionCase> reportFunctionCases = testPlanReportFunctionCaseMapper.selectByExample(functionCaseExample);
+        if (CollectionUtils.isNotEmpty(reportFunctionCases)) {
+            groupSummary.setFunctionalCaseCount((long) reportFunctionCases.size());
+            reportFunctionCases.forEach(reportFunctionCase -> {
+                reportFunctionCase.setId(IDGenerator.nextStr());
+                reportFunctionCase.setTestPlanReportId(reportId);
+            });
+            // 插入计划组报告, 功能用例关联数据
+            TestPlanReportFunctionCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportFunctionCaseMapper.class);
+            batchMapper.batchInsert(reportFunctionCases);
+        }
+        // 接口用例
+        TestPlanReportApiCaseExample apiCaseExample = new TestPlanReportApiCaseExample();
+        apiCaseExample.createCriteria().andTestPlanReportIdIn(ids);
+        List<TestPlanReportApiCase> reportApiCases = testPlanReportApiCaseMapper.selectByExample(apiCaseExample);
+        if (CollectionUtils.isNotEmpty(reportApiCases)) {
+            groupSummary.setApiCaseCount((long) reportApiCases.size());
+            reportApiCases.forEach(reportApiCase -> {
+                reportApiCase.setId(IDGenerator.nextStr());
+                reportApiCase.setTestPlanReportId(reportId);
+            });
+            // 插入计划组报告, 接口用例关联数据
+            TestPlanReportApiCaseMapper batchMapper = sqlSession.getMapper(TestPlanReportApiCaseMapper.class);
+            batchMapper.batchInsert(reportApiCases);
+        }
+        // 场景用例
+        TestPlanReportApiScenarioExample scenarioExample = new TestPlanReportApiScenarioExample();
+        scenarioExample.createCriteria().andTestPlanReportIdIn(ids);
+        List<TestPlanReportApiScenario> reportApiScenarios = testPlanReportApiScenarioMapper.selectByExample(scenarioExample);
+        if (CollectionUtils.isNotEmpty(reportApiScenarios)) {
+            groupSummary.setApiScenarioCount((long) reportApiScenarios.size());
+            reportApiScenarios.forEach(reportApiScenario -> {
+                reportApiScenario.setId(IDGenerator.nextStr());
+                reportApiScenario.setTestPlanReportId(reportId);
+            });
+            // 插入计划组报告, 场景用例关联数据
+            TestPlanReportApiScenarioMapper batchMapper = sqlSession.getMapper(TestPlanReportApiScenarioMapper.class);
+            batchMapper.batchInsert(reportApiScenarios);
+        }
+        // 缺陷明细
+        TestPlanReportBugExample bugExample = new TestPlanReportBugExample();
+        bugExample.createCriteria().andTestPlanReportIdIn(ids);
+        List<TestPlanReportBug> reportBugs = testPlanReportBugMapper.selectByExample(bugExample);
+        if (CollectionUtils.isNotEmpty(reportBugs)) {
+            groupSummary.setBugCount((long) reportBugs.size());
+            reportBugs.forEach(reportBug -> {
+                reportBug.setId(IDGenerator.nextStr());
+                reportBug.setTestPlanReportId(reportId);
+            });
+            // 插入计划组关联用例缺陷数据
+            TestPlanReportBugMapper batchMapper = sqlSession.getMapper(TestPlanReportBugMapper.class);
+            batchMapper.batchInsert(reportBugs);
+        }
+        sqlSession.flushStatements();
+        SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
 
-		// 汇总并计算子报告执行的数据
-		summaryExample.clear();
-		summaryExample.createCriteria().andTestPlanReportIdIn(ids);
-		List<TestPlanReportSummary> summaryList = testPlanReportSummaryMapper.selectByExampleWithBLOBs(summaryExample);
-		List<CaseCount> functionalCaseCountList = new ArrayList<>();
-		List<CaseCount> apiCaseCountList = new ArrayList<>();
-		List<CaseCount> scenarioCountList = new ArrayList<>();
-		List<CaseCount> executeCountList = new ArrayList<>();
-		summaryList.forEach(summary -> {
-			CaseCount functionalCaseCount = summary.getFunctionalExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getFunctionalExecuteResult()), CaseCount.class);
-			CaseCount apiCaseCount = summary.getApiExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getApiExecuteResult()), CaseCount.class);
-			CaseCount scenarioCount = summary.getScenarioExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getScenarioExecuteResult()), CaseCount.class);
-			CaseCount executeCount = summary.getExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getExecuteResult()), CaseCount.class);
-			functionalCaseCountList.add(functionalCaseCount);
-			apiCaseCountList.add(apiCaseCount);
-			scenarioCountList.add(scenarioCount);
-			executeCountList.add(executeCount);
-		});
+        // 汇总并计算子报告执行的数据
+        summaryExample.clear();
+        summaryExample.createCriteria().andTestPlanReportIdIn(ids);
+        List<TestPlanReportSummary> summaryList = testPlanReportSummaryMapper.selectByExampleWithBLOBs(summaryExample);
+        List<CaseCount> functionalCaseCountList = new ArrayList<>();
+        List<CaseCount> apiCaseCountList = new ArrayList<>();
+        List<CaseCount> scenarioCountList = new ArrayList<>();
+        List<CaseCount> executeCountList = new ArrayList<>();
+        summaryList.forEach(summary -> {
+            CaseCount functionalCaseCount = summary.getFunctionalExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getFunctionalExecuteResult()), CaseCount.class);
+            CaseCount apiCaseCount = summary.getApiExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getApiExecuteResult()), CaseCount.class);
+            CaseCount scenarioCount = summary.getScenarioExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getScenarioExecuteResult()), CaseCount.class);
+            CaseCount executeCount = summary.getExecuteResult() == null ? CaseCount.builder().build() : JSON.parseObject(new String(summary.getExecuteResult()), CaseCount.class);
+            functionalCaseCountList.add(functionalCaseCount);
+            apiCaseCountList.add(apiCaseCount);
+            scenarioCountList.add(scenarioCount);
+            executeCountList.add(executeCount);
+        });
 
-		// 入库组汇总数据 => 报告详情表
-		groupSummary.setFunctionalExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(functionalCaseCountList)));
-		groupSummary.setApiExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(apiCaseCountList)));
-		groupSummary.setScenarioExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(scenarioCountList)));
-		groupSummary.setExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(executeCountList)));
-		testPlanReportSummaryMapper.updateByPrimaryKeySelective(groupSummary);
-	}
+        // 入库组汇总数据 => 报告详情表
+        groupSummary.setFunctionalExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(functionalCaseCountList)));
+        groupSummary.setApiExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(apiCaseCountList)));
+        groupSummary.setScenarioExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(scenarioCountList)));
+        groupSummary.setExecuteResult(JSON.toJSONBytes(CountUtils.summarizeProperties(executeCountList)));
+        testPlanReportSummaryMapper.updateByPrimaryKeySelective(groupSummary);
+    }
 
     /**
      * 通过请求参数获取批量操作的ID集合
@@ -850,7 +946,7 @@ public class TestPlanReportService {
             if (CollectionUtils.isEmpty(folderFileNames)) {
                 return null;
             }
-            String[] pathSplit = folderFileNames.get(0).split("/");
+            String[] pathSplit = folderFileNames.getFirst().split("/");
             return pathSplit[pathSplit.length - 1];
         } catch (Exception e) {
             LogUtils.error(e);
@@ -892,24 +988,25 @@ public class TestPlanReportService {
         }
     }
 
-	/**
-	 * 构建预生成报告的参数
-	 * @param genRequest 报告请求参数
-	 * @return 预生成报告参数
-	 */
-	private TestPlanReportGenPreParam buildReportGenParam(TestPlanReportGenRequest genRequest, TestPlan testPlan, String groupReportId) {
-		TestPlanReportGenPreParam genPreParam = new TestPlanReportGenPreParam();
-		BeanUtils.copyBean(genPreParam, genRequest);
-		genPreParam.setTestPlanName(testPlan.getName());
-		genPreParam.setStartTime(System.currentTimeMillis());
-		// 报告预生成时, 执行状态为未执行, 结果状态为'-'
-		genPreParam.setExecStatus(ExecStatus.PENDING.name());
-		genPreParam.setResultStatus("-");
-		// 是否集成报告(计划组报告), 目前根据是否计划组来区分
-		genPreParam.setIntegrated(StringUtils.equals(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP));
-		genPreParam.setGroupReportId(groupReportId);
-		return genPreParam;
-	}
+    /**
+     * 构建预生成报告的参数
+     *
+     * @param genRequest 报告请求参数
+     * @return 预生成报告参数
+     */
+    private TestPlanReportGenPreParam buildReportGenParam(TestPlanReportGenRequest genRequest, TestPlan testPlan, String groupReportId) {
+        TestPlanReportGenPreParam genPreParam = new TestPlanReportGenPreParam();
+        BeanUtils.copyBean(genPreParam, genRequest);
+        genPreParam.setTestPlanName(testPlan.getName());
+        genPreParam.setStartTime(System.currentTimeMillis());
+        // 报告预生成时, 执行状态为未执行, 结果状态为'-'
+        genPreParam.setExecStatus(ExecStatus.PENDING.name());
+        genPreParam.setResultStatus("-");
+        // 是否集成报告(计划组报告), 目前根据是否计划组来区分
+        genPreParam.setIntegrated(StringUtils.equals(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP));
+        genPreParam.setGroupReportId(groupReportId);
+        return genPreParam;
+    }
 
     /**
      * 统计执行状态的用例数量
@@ -920,11 +1017,11 @@ public class TestPlanReportService {
     private CaseCount countMap(List<CaseStatusCountMap> resultMapList) {
         CaseCount caseCount = new CaseCount();
         Map<String, Long> resultMap = resultMapList.stream().collect(Collectors.toMap(CaseStatusCountMap::getStatus, CaseStatusCountMap::getCount));
-        caseCount.setSuccess(resultMap.getOrDefault(ExecStatus.SUCCESS.name(), 0L).intValue());
-        caseCount.setError(resultMap.getOrDefault(ExecStatus.ERROR.name(), 0L).intValue());
-        caseCount.setPending(resultMap.getOrDefault(ExecStatus.PENDING.name(), 0L).intValue());
-        caseCount.setBlock(resultMap.getOrDefault(ExecStatus.BLOCKED.name(), 0L).intValue());
-        caseCount.setFakeError(resultMap.getOrDefault(ExecStatus.FAKE_ERROR.name(), 0L).intValue());
+        caseCount.setSuccess(resultMap.getOrDefault(ResultStatus.SUCCESS.name(), 0L).intValue());
+        caseCount.setError(resultMap.getOrDefault(ResultStatus.ERROR.name(), 0L).intValue());
+        caseCount.setPending(resultMap.getOrDefault(ExecStatus.PENDING.name(), 0L).intValue() + resultMap.getOrDefault(ExecStatus.STOPPED.name(), 0L).intValue());
+        caseCount.setBlock(resultMap.getOrDefault(ResultStatus.BLOCKED.name(), 0L).intValue());
+        caseCount.setFakeError(resultMap.getOrDefault(ResultStatus.FAKE_ERROR.name(), 0L).intValue());
         return caseCount;
     }
 
@@ -987,7 +1084,98 @@ public class TestPlanReportService {
         return extTestPlanReportMapper.getPlanReportListById(request);
     }
 
-	public void updateExecuteTimeAndStatus(String prepareReportId) {
-		extTestPlanReportMapper.batchUpdateExecuteTimeAndStatus(System.currentTimeMillis(), Collections.singletonList(prepareReportId));
-	}
+    public ResponseEntity<byte[]> previewMd(String projectId, String fileId, boolean compressed) {
+        byte[] bytes;
+        String fileName;
+        TestPlanReportAttachmentExample example = new TestPlanReportAttachmentExample();
+        example.createCriteria().andFileIdEqualTo(fileId);
+        List<TestPlanReportAttachment> reportAttachments = testPlanReportAttachmentMapper.selectByExample(example);
+        if (CollectionUtils.isEmpty(reportAttachments)) {
+            //在临时文件获取
+            fileName = getTempFileNameByFileId(fileId);
+            bytes = getPreviewImg(fileName, fileId, compressed);
+        } else {
+            //在正式目录获取
+            TestPlanReportAttachment attachment = reportAttachments.getFirst();
+            fileName = attachment.getFileName();
+            FileRequest fileRequest = buildPlanFileRequest(projectId, attachment.getTestPlanReportId(), attachment.getFileId(), attachment.getFileName());
+            try {
+                bytes = fileService.download(fileRequest);
+            } catch (Exception e) {
+                throw new MSException("get file error");
+            }
+        }
+        return ResponseEntity.ok()
+                .contentType(MediaType.parseMediaType("application/octet-stream"))
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + fileName + "\"")
+                .body(bytes);
+    }
+
+    public void updateExecuteTimeAndStatus(String prepareReportId) {
+        extTestPlanReportMapper.batchUpdateExecuteTimeAndStatus(System.currentTimeMillis(), Collections.singletonList(prepareReportId));
+    }
+
+    /**
+     * 构建计划报告文件请求
+     *
+     * @param projectId  项目ID
+     * @param resourceId 资源ID
+     * @param fileId     文件ID
+     * @param fileName   文件名称
+     * @return 文件请求对象
+     */
+    private FileRequest buildPlanFileRequest(String projectId, String resourceId, String fileId, String fileName) {
+        FileRequest fileRequest = new FileRequest();
+        fileRequest.setFolder(DefaultRepositoryDir.getPlanReportDir(projectId, resourceId) + "/" + fileId);
+        fileRequest.setFileName(StringUtils.isEmpty(fileName) ? null : fileName);
+        fileRequest.setStorage(StorageType.MINIO.name());
+        return fileRequest;
+    }
+
+    public byte[] getPreviewImg(String fileName, String fileId, boolean isCompressed) {
+        String systemTempDir;
+        if (isCompressed) {
+            systemTempDir = DefaultRepositoryDir.getSystemTempCompressDir();
+        } else {
+            systemTempDir = DefaultRepositoryDir.getSystemTempDir();
+        }
+        FileRequest previewRequest = new FileRequest();
+        previewRequest.setFileName(fileName);
+        previewRequest.setStorage(StorageType.MINIO.name());
+        previewRequest.setFolder(systemTempDir + "/" + fileId);
+        byte[] previewImg = null;
+        try {
+            previewImg = fileService.download(previewRequest);
+        } catch (Exception e) {
+            LogUtils.error("获取预览图失败：{}", e);
+        }
+
+        if (previewImg == null || previewImg.length == 0) {
+            try {
+                if (isCompressed) {
+                    previewImg = this.compressPicWithFileMetadata(fileName, fileId);
+                    previewRequest.setFolder(DefaultRepositoryDir.getSystemTempCompressDir() + "/" + fileId);
+                    fileService.upload(previewImg, previewRequest);
+                }
+                return previewImg;
+            } catch (Exception e) {
+                LogUtils.error("获取预览图失败：{}", e);
+            }
+        }
+        return previewImg;
+    }
+
+    //获取文件并压缩的方法需要上锁，防止并发超过一定数量时内存溢出
+    private synchronized byte[] compressPicWithFileMetadata(String fileName, String fileId) throws Exception {
+        byte[] fileBytes = this.getFile(fileName, fileId);
+        return TempFileUtils.compressPic(fileBytes);
+    }
+
+    public byte[] getFile(String fileName, String fileId) throws Exception {
+        FileRequest fileRequest = new FileRequest();
+        fileRequest.setFileName(fileName);
+        fileRequest.setFolder(DefaultRepositoryDir.getSystemTempDir() + "/" + fileId);
+        fileRequest.setStorage(StorageType.MINIO.name());
+        return fileService.download(fileRequest);
+    }
 }
