@@ -6,6 +6,7 @@ import io.metersphere.plan.dto.TestPlanExecuteHisDTO;
 import io.metersphere.plan.dto.request.*;
 import io.metersphere.plan.dto.response.TestPlanDetailResponse;
 import io.metersphere.plan.dto.response.TestPlanOperationResponse;
+import io.metersphere.plan.dto.response.TestPlanStatisticsResponse;
 import io.metersphere.plan.enums.ExecuteMethod;
 import io.metersphere.plan.job.TestPlanScheduleJob;
 import io.metersphere.plan.mapper.*;
@@ -13,14 +14,15 @@ import io.metersphere.project.request.ProjectApplicationRequest;
 import io.metersphere.project.service.ProjectApplicationService;
 import io.metersphere.sdk.constants.*;
 import io.metersphere.sdk.exception.MSException;
-import io.metersphere.sdk.util.*;
+import io.metersphere.sdk.util.BeanUtils;
+import io.metersphere.sdk.util.CommonBeanFactory;
+import io.metersphere.sdk.util.SubListUtils;
+import io.metersphere.sdk.util.Translator;
 import io.metersphere.system.domain.ScheduleExample;
 import io.metersphere.system.domain.TestPlanModule;
 import io.metersphere.system.domain.TestPlanModuleExample;
 import io.metersphere.system.domain.User;
 import io.metersphere.system.dto.LogInsertModule;
-import io.metersphere.system.dto.request.ScheduleConfig;
-import io.metersphere.system.dto.request.schedule.BaseScheduleConfigRequest;
 import io.metersphere.system.dto.sdk.OptionDTO;
 import io.metersphere.system.dto.sdk.request.PosRequest;
 import io.metersphere.system.log.constants.OperationLogType;
@@ -33,10 +35,11 @@ import io.metersphere.system.schedule.ScheduleService;
 import io.metersphere.system.uid.IDGenerator;
 import io.metersphere.system.uid.NumGenerator;
 import io.metersphere.system.utils.BatchProcessUtils;
+import io.metersphere.system.utils.ServiceUtils;
 import jakarta.annotation.Resource;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
-import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.ibatis.session.ExecutorType;
@@ -77,8 +80,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     @Resource
     private TestPlanStatisticsService testPlanStatisticsService;
     @Resource
-    private TestPlanCaseService testPlanCaseService;
-    @Resource
     private ScheduleMapper scheduleMapper;
     @Resource
     SqlSessionFactory sqlSessionFactory;
@@ -97,14 +98,66 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     @Resource
     private TestPlanFunctionalCaseMapper testPlanFunctionalCaseMapper;
     @Resource
+    private TestPlanReportFunctionCaseMapper testPlanReportFunctionCaseMapper;
+    @Resource
     private TestPlanApiCaseMapper testPlanApiCaseMapper;
     @Resource
     private TestPlanApiScenarioMapper testPlanApiScenarioMapper;
+    @Resource
+    private TestPlanReportCaseService testPlanReportCaseService;
 
-    private static final int MAX_TAG_SIZE = 10;
-    private static final int MAX_CHILDREN_COUNT = 20;
-    @Autowired
+    @Resource
     private TestPlanReportService testPlanReportService;
+    @Resource
+    private TestPlanReportMapper testPlanReportMapper;
+
+    public void autoUpdateFunctionalCase(String testPlanReportId) {
+        TestPlanReport testPlanReport = testPlanReportMapper.selectByPrimaryKey(testPlanReportId);
+        if (testPlanReport == null) {
+            return;
+        }
+        TestPlanConfig testPlanConfig = testPlanConfigMapper.selectByPrimaryKey(testPlanReport.getTestPlanId());
+        if (testPlanConfig != null && BooleanUtils.isTrue(testPlanConfig.getAutomaticStatusUpdate())) {
+            TestPlanFunctionalCaseService testPlanFunctionalCaseService = CommonBeanFactory.getBean(TestPlanFunctionalCaseService.class);
+            Map<String, List<String>> execResultFuncCaseMap = new HashMap<>();
+            List<String> functionalCaseIds = testPlanReportCaseService.selectFunctionalCaseIdsByTestPlanId(testPlanReport.getTestPlanId());
+            Map<String, List<String>> funcCaseAssociationCaseMap = testPlanFunctionalCaseService.getFuncCaseAssociationCaseMap(functionalCaseIds);
+            Map<String, String> caseExecResult = testPlanReportCaseService.selectCaseExecResultByReportId(testPlanReportId);
+            funcCaseAssociationCaseMap.forEach((funcCaseId, apiIdList) -> {
+                List<String> execResultList = new ArrayList<>();
+                apiIdList.forEach(apiId -> {
+                    String result = caseExecResult.get(apiId);
+                    if (StringUtils.isNotBlank(result)) {
+                        execResultList.add(result);
+                    }
+                });
+                String lastResult = testPlanReportCaseService.calculateFuncCaseExecResult(execResultList);
+                if (StringUtils.isNotBlank(lastResult)) {
+                    if (execResultFuncCaseMap.containsKey(lastResult)) {
+                        execResultFuncCaseMap.get(lastResult).add(funcCaseId);
+                    } else {
+                        execResultFuncCaseMap.put(lastResult, new ArrayList<>() {{
+                            this.add(funcCaseId);
+                        }});
+                    }
+                }
+            });
+            execResultFuncCaseMap.forEach((result, funcCaseIds) -> {
+                TestPlanFunctionalCaseExample updateExample = new TestPlanFunctionalCaseExample();
+                updateExample.createCriteria().andTestPlanIdEqualTo(testPlanReport.getTestPlanId()).andFunctionalCaseIdIn(funcCaseIds);
+                TestPlanFunctionalCase updateRecord = new TestPlanFunctionalCase();
+                updateRecord.setLastExecResult(result);
+                testPlanFunctionalCaseMapper.updateByExampleSelective(updateRecord, updateExample);
+                // 报告-功能用例的执行结果同步刷新
+                TestPlanReportFunctionCaseExample caseExample = new TestPlanReportFunctionCaseExample();
+                caseExample.createCriteria().andTestPlanReportIdEqualTo(testPlanReportId).andTestPlanFunctionCaseIdIn(funcCaseIds);
+                TestPlanReportFunctionCase reportFunctionCase = new TestPlanReportFunctionCase();
+                reportFunctionCase.setFunctionCaseExecuteResult(result);
+                reportFunctionCase.setFunctionCaseExecuteReportId(null);
+                testPlanReportFunctionCaseMapper.updateByExampleSelective(reportFunctionCase, caseExample);
+            });
+        }
+    }
 
     /**
      * 创建测试计划
@@ -113,11 +166,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         TestPlan testPlan = savePlanDTO(testPlanCreateRequest, operator);
         //自动生成测试规划
         this.initDefaultPlanCollection(testPlan.getId(), operator);
-
-        if (!StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-            //更新计划组状态
-            this.updateTestPlanGroupStatus(testPlan.getGroupId());
-        }
 
         testPlanLogService.saveAddLog(testPlan, operator, requestUrl, requestMethod);
         return testPlan;
@@ -133,7 +181,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     private TestPlan savePlanDTO(TestPlanCreateRequest createOrCopyRequest, String operator) {
         //检查模块的合法性
         checkModule(createOrCopyRequest.getModuleId());
-        this.checkTagsLength(createOrCopyRequest.getTags());
         if (StringUtils.equalsIgnoreCase(createOrCopyRequest.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)
                 && !StringUtils.equalsIgnoreCase(createOrCopyRequest.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
             throw new MSException(Translator.get("test_plan.group.error"));
@@ -141,11 +188,11 @@ public class TestPlanService extends TestPlanBaseUtilsService {
 
         TestPlan createTestPlan = new TestPlan();
         BeanUtils.copyBean(createTestPlan, createOrCopyRequest);
-        validateTestPlanGroup(createTestPlan.getGroupId(), 1);
-
+        createTestPlan.setTags(ServiceUtils.parseTags(createTestPlan.getTags()));
         if (!StringUtils.equals(createTestPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
+            TestPlan groupPlan = testPlanGroupService.validateGroupCapacity(createTestPlan.getGroupId(), 1);
             // 判断测试计划组是否存在
-            createTestPlan.setModuleId(testPlanMapper.selectByPrimaryKey(createTestPlan.getGroupId()).getModuleId());
+            createTestPlan.setModuleId(groupPlan.getModuleId());
         }
 
         initTestPlanPos(createTestPlan);
@@ -157,7 +204,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         createTestPlan.setUpdateUser(operator);
         createTestPlan.setCreateTime(operateTime);
         createTestPlan.setUpdateTime(operateTime);
-        createTestPlan.setStatus(TestPlanConstants.TEST_PLAN_STATUS_PREPARED);
+        createTestPlan.setStatus(TestPlanConstants.TEST_PLAN_STATUS_NOT_ARCHIVED);
 
         TestPlanConfig testPlanConfig = new TestPlanConfig();
         testPlanConfig.setTestPlanId(createTestPlan.getId());
@@ -171,39 +218,18 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     }
 
 
-    /**
-     * 校验测试计划组
-     *
-     * @param groupId     测试计划组Id
-     * @param preAddCount 准备添加的数量
-     */
-    private void validateTestPlanGroup(String groupId, int preAddCount) {
-        if (!StringUtils.equals(groupId, TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-            // 判断测试计划组是否存在
-            TestPlan groupPlan = testPlanMapper.selectByPrimaryKey(groupId);
-            if (StringUtils.equalsIgnoreCase(groupPlan.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED)) {
-                throw new MSException(Translator.get("test_plan.group.error"));
-            }
-            //判断并未归档
-            if (StringUtils.equalsIgnoreCase(groupPlan.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED)) {
-                throw new MSException(Translator.get("test_plan.group.error"));
-            }
-            //判断测试计划组下的测试计划数量是否超过20
-            TestPlanExample example = new TestPlanExample();
-            example.createCriteria().andGroupIdEqualTo(groupId);
-            if (testPlanMapper.countByExample(example) + preAddCount > 20) {
-                throw new MSException(Translator.getWithArgs("test_plan.group.children.max", MAX_CHILDREN_COUNT));
-            }
+    //校验测试计划
+    private void initTestPlanPos(TestPlan createTestPlan) {
+        if (StringUtils.equals(createTestPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
+            createTestPlan.setPos(this.getNextOrder(createTestPlan.getProjectId(), createTestPlan.getGroupId()));
+        } else {
+            createTestPlan.setPos(testPlanGroupService.getNextOrder(createTestPlan.getGroupId()));
         }
     }
 
-    //校验测试计划
-    private void initTestPlanPos(TestPlan createTestPlan) {
-        if (!StringUtils.equals(createTestPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-            createTestPlan.setPos(testPlanGroupService.getNextOrder(createTestPlan.getGroupId()));
-        } else {
-            createTestPlan.setPos(0L);
-        }
+    public long getNextOrder(String projectId, String groupId) {
+        long maxPos = extTestPlanMapper.selectMaxPosByProjectIdAndGroupId(projectId, groupId);
+        return maxPos + ServiceUtils.POS_STEP;
     }
 
     /**
@@ -218,11 +244,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             //级联删除
             TestPlanReportService testPlanReportService = CommonBeanFactory.getBean(TestPlanReportService.class);
             this.cascadeDeleteTestPlanIds(Collections.singletonList(id), testPlanReportService);
-
-            if (!StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-                //更新计划组状态
-                this.updateTestPlanGroupStatus(testPlan.getGroupId());
-            }
         }
         //记录日志
         testPlanLogService.saveDeleteLog(testPlan, operator, requestUrl, requestMethod);
@@ -302,7 +323,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
                 // 计划组的删除暂时预留
                 this.deleteGroupByList(testPlanGroupList);
                 //记录日志
-                testPlanLogService.saveBatchLog(deleteTestPlanList, operator, requestUrl, requestMethod, OperationLogType.DELETE.name(), "delete");
+                testPlanLogService.saveBatchLog(deleteTestPlanList, operator, requestUrl, requestMethod, OperationLogType.DELETE.name());
             }
         }
     }
@@ -345,42 +366,50 @@ public class TestPlanService extends TestPlanBaseUtilsService {
      */
     public TestPlan update(TestPlanUpdateRequest request, String userId, String requestUrl, String requestMethod) {
         this.checkTestPlanNotArchived(request.getId());
-        TestPlan testPlan = testPlanMapper.selectByPrimaryKey(request.getId());
-        if (!ObjectUtils.allNull(request.getName(), request.getModuleId(), request.getTags(), request.getPlannedEndTime(), request.getPlannedStartTime(), request.getDescription(), request.getGroupId())) {
-            TestPlan updateTestPlan = new TestPlan();
-            updateTestPlan.setId(request.getId());
-            if (StringUtils.isNotBlank(request.getModuleId())) {
+        TestPlan originalTestPlan = testPlanMapper.selectByPrimaryKey(request.getId());
+
+        TestPlan updateTestPlan = new TestPlan();
+        updateTestPlan.setId(request.getId());
+        updateTestPlan.setName(request.getName());
+        updateTestPlan.setPlannedStartTime(request.getPlannedStartTime());
+        updateTestPlan.setPlannedEndTime(request.getPlannedEndTime());
+        updateTestPlan.setDescription(request.getDescription());
+        //判断有没有用户组的变化
+        if (StringUtils.isNotBlank(request.getGroupId()) && !StringUtils.equalsIgnoreCase(request.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
+            if (!StringUtils.equalsIgnoreCase(originalTestPlan.getGroupId(), request.getGroupId())) {
+                //用户更换了测试计划组
+                TestPlan testPlanGroup = testPlanGroupService.validateGroupCapacity(request.getGroupId(), 1);
+                updateTestPlan.setGroupId(testPlanGroup.getId());
+                this.deleteScheduleConfig(request.getId());
+                updateTestPlan.setPos(testPlanGroupService.getNextOrder(request.getGroupId()));
+                updateTestPlan.setModuleId(testPlanGroup.getModuleId());
+            }
+        } else {
+            request.setGroupId(TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID);
+            if (!StringUtils.equalsIgnoreCase(originalTestPlan.getGroupId(), request.getGroupId())) {
+                //移出了测试计划组
+                this.deleteScheduleConfig(request.getId());
+                updateTestPlan.setPos(testPlanGroupService.getNextOrder(request.getGroupId()));
+            }
+        }
+        //判断有没有模块的变化
+        if (StringUtils.isNotBlank(request.getModuleId())) {
+            if (!StringUtils.equalsIgnoreCase(request.getModuleId(), originalTestPlan.getModuleId())) {
                 //检查模块的合法性
                 checkModule(request.getModuleId());
                 updateTestPlan.setModuleId(request.getModuleId());
-                //移动模块时重置GroupId
-                updateTestPlan.setGroupId(TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID);
             }
-            if (StringUtils.isNotBlank(request.getGroupId()) && !StringUtils.equalsIgnoreCase(request.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-                //移动测试计划到测试计划组中，删除定时任务
-                updateTestPlan.setGroupId(request.getGroupId());
-                this.deleteScheduleConfig(request.getId());
-            }
-            if (StringUtils.isNotBlank(request.getName())) {
-                updateTestPlan.setName(request.getName());
-                updateTestPlan.setProjectId(testPlan.getProjectId());
-            }
-            if (CollectionUtils.isNotEmpty(request.getTags())) {
-                updateTestPlan.setTags(new ArrayList<>(request.getTags()));
-            } else {
-                updateTestPlan.setTags(new ArrayList<>());
-            }
-            updateTestPlan.setPlannedStartTime(request.getPlannedStartTime());
-            updateTestPlan.setPlannedEndTime(request.getPlannedEndTime());
-            updateTestPlan.setDescription(request.getDescription());
-            if (CollectionUtils.isNotEmpty(request.getTags())) {
-                List<String> tags = new ArrayList<>(request.getTags());
-                this.checkTagsLength(tags);
-                updateTestPlan.setTags(tags);
-            }
-            updateTestPlan.setType(testPlan.getType());
-            testPlanMapper.updateByPrimaryKeySelective(updateTestPlan);
         }
+
+        //判断标签的变化
+        if (CollectionUtils.isNotEmpty(request.getTags())) {
+            List<String> tags = new ArrayList<>(request.getTags());
+            updateTestPlan.setTags(ServiceUtils.parseTags(tags));
+        } else {
+            updateTestPlan.setTags(new ArrayList<>());
+        }
+        testPlanMapper.updateByPrimaryKeySelective(updateTestPlan);
+        TestPlan testPlan = testPlanMapper.selectByPrimaryKey(updateTestPlan.getId());
 
         if (!ObjectUtils.allNull(request.getAutomaticStatusUpdate(), request.getRepeatCase(), request.getPassThreshold(), request.getTestPlanning())) {
             TestPlanConfig testPlanConfig = new TestPlanConfig();
@@ -390,8 +419,9 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             testPlanConfig.setPassThreshold(request.getPassThreshold());
             testPlanConfigMapper.updateByPrimaryKeySelective(testPlanConfig);
         }
+
         testPlanLogService.saveUpdateLog(testPlan, testPlanMapper.selectByPrimaryKey(request.getId()), testPlan.getProjectId(), userId, requestUrl, requestMethod);
-        return testPlan;
+        return updateTestPlan;
     }
 
 
@@ -417,18 +447,20 @@ public class TestPlanService extends TestPlanBaseUtilsService {
 
     /**
      * 测试计划归档
-     *
-     * @param id
-     * @param userId
      */
     public void archived(String id, String userId) {
         TestPlan testPlan = testPlanMapper.selectByPrimaryKey(id);
+
         if (StringUtils.equalsAnyIgnoreCase(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)) {
+            //判断当前计划组下是否都已完成 (由于算法原因，只需要校验当前测试计划组即可）
+            if (!this.isTestPlanCompleted(id)) {
+                throw new MSException(Translator.get("test_plan.group.not_plan"));
+            }
             //测试计划组归档
-            updateGroupStatus(testPlan.getId(), userId);
+            updateCompletedGroupStatus(testPlan.getId(), userId);
             //关闭定时任务
             this.deleteScheduleConfig(testPlan.getId());
-        } else if (StringUtils.equals(testPlan.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_COMPLETED) && StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
+        } else if (this.isTestPlanCompleted(id) && StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
             //测试计划
             testPlan.setStatus(TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED);
             testPlan.setUpdateUser(userId);
@@ -439,7 +471,37 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         } else {
             throw new MSException(Translator.get("test_plan.cannot.archived"));
         }
+    }
 
+    /**
+     * 测试计划归档
+     */
+    public boolean archived(TestPlan testPlan, String userId) {
+        if (!this.isTestPlanCompleted(testPlan.getId())) {
+            return false;
+        }
+        if (StringUtils.equalsAnyIgnoreCase(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)) {
+            //测试计划组归档
+            updateCompletedGroupStatus(testPlan.getId(), userId);
+            //关闭定时任务
+            this.deleteScheduleConfig(testPlan.getId());
+            return true;
+        } else if (StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
+            //测试计划
+            testPlan.setStatus(TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED);
+            testPlan.setUpdateUser(userId);
+            testPlan.setUpdateTime(System.currentTimeMillis());
+            testPlanMapper.updateByPrimaryKeySelective(testPlan);
+            //关闭定时任务
+            this.deleteScheduleConfig(testPlan.getId());
+            return true;
+        }
+        return false;
+    }
+
+    public boolean isTestPlanCompleted(String testPlanId) {
+        TestPlanStatisticsResponse statisticsResponse = testPlanStatisticsService.calculateRate(Collections.singletonList(testPlanId)).getFirst();
+        return StringUtils.equalsIgnoreCase(statisticsResponse.getStatus(), TestPlanConstants.TEST_PLAN_SHOW_STATUS_COMPLETED);
     }
 
     /**
@@ -452,14 +514,20 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         List<String> batchArchivedIds = request.getSelectIds();
         if (CollectionUtils.isNotEmpty(batchArchivedIds)) {
             TestPlanExample example = new TestPlanExample();
-            example.createCriteria().andIdIn(batchArchivedIds);
-            List<TestPlan> archivedPlanList = testPlanMapper.selectByExample(example).stream().filter(
+            example.createCriteria().andIdIn(batchArchivedIds).andStatusNotEqualTo(TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED);
+            List<TestPlan> testPlanList = testPlanMapper.selectByExample(example).stream().filter(
                     testPlan -> StringUtils.equalsAnyIgnoreCase(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)
-                            || (StringUtils.equals(testPlan.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_COMPLETED) && StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID))
-            ).collect(Collectors.toList());
-            archivedPlanList.forEach(item -> this.archived(item.getId(), currentUser));
+                            || (StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID))
+            ).toList();
+            List<TestPlan> archivedPlanGroupList = new ArrayList<>();
+            testPlanList.forEach(item -> {
+                boolean result = this.archived(item, currentUser);
+                if (result) {
+                    archivedPlanGroupList.add(item);
+                }
+            });
             //日志
-            testPlanLogService.saveBatchLog(archivedPlanList, currentUser, "/test-plan/batch-archived", HttpMethodConstants.POST.name(), OperationLogType.UPDATE.name(), "archive");
+            testPlanLogService.saveBatchLog(archivedPlanGroupList, currentUser, "/test-plan/batch-archived", HttpMethodConstants.POST.name(), OperationLogType.ARCHIVED.name());
         }
     }
 
@@ -469,17 +537,14 @@ public class TestPlanService extends TestPlanBaseUtilsService {
      * @param id
      * @param userId
      */
-    private void updateGroupStatus(String id, String userId) {
+    private void updateCompletedGroupStatus(String id, String userId) {
         TestPlanExample example = new TestPlanExample();
         example.createCriteria().andGroupIdEqualTo(id);
         List<TestPlan> testPlanList = testPlanMapper.selectByExample(example);
         if (CollectionUtils.isEmpty(testPlanList)) {
             throw new MSException(Translator.get("test_plan.group.not_plan"));
         }
-        List<String> ids = testPlanList.stream().filter(item -> StringUtils.equalsIgnoreCase(item.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_COMPLETED)).map(TestPlan::getId).collect(Collectors.toList());
-        if (CollectionUtils.isEmpty(ids)) {
-            throw new MSException(Translator.get("test_plan.group.not_plan"));
-        }
+        List<String> ids = testPlanList.stream().map(TestPlan::getId).collect(Collectors.toList());
         ids.add(id);
         extTestPlanMapper.batchUpdateStatus(TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED, userId, System.currentTimeMillis(), ids);
     }
@@ -487,7 +552,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     /**
      * 复制测试计划
      */
-    public long copy(String testPlanId, String userId) {
+    public String copy(String testPlanId, String userId) {
         TestPlan testPlan = testPlanMapper.selectByPrimaryKey(testPlanId);
         TestPlan copyPlan = null;
         if (StringUtils.equalsIgnoreCase(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)) {
@@ -496,7 +561,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             copyPlan = testPlanBatchOperationService.copyPlan(testPlan, testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_TYPE_GROUP, System.currentTimeMillis(), userId);
         }
         testPlanLogService.copyLog(copyPlan, userId);
-        return 1;
+        return copyPlan.getId();
     }
 
     /**
@@ -592,16 +657,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             response.setGroupName(group.getName());
         }
     }
-
-
-    public String getModuleName(String id) {
-        if (ModuleConstants.DEFAULT_NODE_ID.equals(id)) {
-            return Translator.get("unplanned.plan");
-        }
-        TestPlanModule module = testPlanModuleMapper.selectByPrimaryKey(id);
-        return module == null ? StringUtils.EMPTY : module.getName();
-    }
-
+    
 
     /**
      * 批量复制 （计划/计划组）
@@ -619,15 +675,16 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         if (CollectionUtils.isNotEmpty(copyIds)) {
             TestPlanExample example = new TestPlanExample();
             example.createCriteria().andIdIn(copyIds);
-            List<TestPlan> copyTestPlanList = testPlanMapper.selectByExample(example);
+            List<TestPlan> originalTestPlanList = testPlanMapper.selectByExample(example);
 
             //批量复制时，不允许存在测试计划组下的测试计划。
-            copyTestPlanList = copyTestPlanList.stream().filter(item -> StringUtils.equalsIgnoreCase(item.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID))
+            originalTestPlanList = originalTestPlanList.stream().filter(item -> StringUtils.equalsIgnoreCase(item.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID))
                     .collect(Collectors.toList());
             //日志
-            if (CollectionUtils.isNotEmpty(copyTestPlanList)) {
-                copyCount = testPlanBatchOperationService.batchCopy(copyTestPlanList, request.getTargetId(), request.getMoveType(), userId);
-                testPlanLogService.saveBatchLog(copyTestPlanList, userId, url, method, OperationLogType.COPY.name(), "copy");
+            if (CollectionUtils.isNotEmpty(originalTestPlanList)) {
+                List<TestPlan> copyPlanList = testPlanBatchOperationService.batchCopy(originalTestPlanList, request.getTargetId(), request.getMoveType(), userId);
+                copyCount = copyPlanList.size();
+                testPlanLogService.saveBatchLog(copyPlanList, userId, url, method, OperationLogType.ADD.name());
             }
 
         }
@@ -657,14 +714,18 @@ public class TestPlanService extends TestPlanBaseUtilsService {
                 moveTestPlanList = moveTestPlanList.stream().filter(
                         item -> StringUtils.equalsIgnoreCase(item.getType(), TestPlanConstants.TEST_PLAN_TYPE_PLAN) && !StringUtils.equalsIgnoreCase(item.getGroupId(), request.getTargetId())
                 ).collect(Collectors.toList());
-                this.validateTestPlanGroup(request.getTargetId(), moveTestPlanList.size());
+                if (!StringUtils.equalsIgnoreCase(request.getTargetId(), TestPlanConstants.DEFAULT_PARENT_ID)) {
+                    testPlanGroupService.validateGroupCapacity(request.getTargetId(), moveTestPlanList.size());
+                }
                 moveCount = testPlanBatchOperationService.batchMoveGroup(moveTestPlanList, request.getTargetId(), userId);
+                //移动到计划组后要删除定时任务
+                moveTestPlanList.forEach(item -> this.deleteScheduleConfig(item.getId()));
             } else {
                 moveCount = testPlanBatchOperationService.batchMoveModule(moveTestPlanList, request.getTargetId(), userId);
             }
             //日志
             if (CollectionUtils.isNotEmpty(moveTestPlanList)) {
-                testPlanLogService.saveBatchLog(moveTestPlanList, userId, operationUrl, method, OperationLogType.UPDATE.name(), "update");
+                testPlanLogService.saveBatchLog(moveTestPlanList, userId, operationUrl, method, OperationLogType.UPDATE.name());
             }
         }
         return moveCount;
@@ -719,11 +780,9 @@ public class TestPlanService extends TestPlanBaseUtilsService {
                     if (CollectionUtils.isNotEmpty(collect.get(id).getTags())) {
                         List<String> tags = collect.get(id).getTags();
                         tags.addAll(request.getTags());
-                        checkTagsLength(tags);
-                        List<String> newTags = tags.stream().distinct().collect(Collectors.toList());
-                        testPlan.setTags(newTags);
+                        testPlan.setTags(ServiceUtils.parseTags(tags));
                     } else {
-                        testPlan.setTags(request.getTags());
+                        testPlan.setTags(ServiceUtils.parseTags(request.getTags()));
                     }
                     testPlan.setId(id);
                     testPlan.setUpdateTime(System.currentTimeMillis());
@@ -735,7 +794,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             } else {
                 //替换标签
                 TestPlan testPlan = new TestPlan();
-                testPlan.setTags(request.getTags());
+                testPlan.setTags(ServiceUtils.parseTags(request.getTags()));
                 testPlan.setProjectId(request.getProjectId());
                 testPlan.setUpdateTime(System.currentTimeMillis());
                 testPlan.setUpdateUser(userId);
@@ -743,18 +802,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
             }
         }
 
-    }
-
-
-    /**
-     * 校验追加标签长度
-     *
-     * @param tags
-     */
-    private void checkTagsLength(List<String> tags) {
-        if (CollectionUtils.size(tags) > MAX_TAG_SIZE) {
-            throw new MSException(Translator.getWithArgs("tags_length_large_than", String.valueOf(MAX_TAG_SIZE)));
-        }
     }
 
     //通过项目删除测试计划
@@ -790,10 +837,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     @Autowired
     private ApplicationContext applicationContext;
 
-    public void setTestPlanUnderway(String testPlanId) {
-        this.updateTestPlanStatusAndGroupStatus(testPlanId, TestPlanConstants.TEST_PLAN_STATUS_UNDERWAY);
-    }
-
     public void setActualStartTime(String testPlanId) {
         long actualStartTime = System.currentTimeMillis();
         TestPlan testPlan = testPlanMapper.selectByPrimaryKey(testPlanId);
@@ -805,123 +848,16 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         }
     }
 
-    private void updateTestPlanStatusAndGroupStatus(String testPlanId, String testPlanStatus) {
-        TestPlan testPlan = new TestPlan();
-        testPlan.setId(testPlanId);
-        testPlan.setStatus(testPlanStatus);
-        testPlanMapper.updateByPrimaryKeySelective(testPlan);
-
-        testPlan = testPlanMapper.selectByPrimaryKey(testPlanId);
-        if (!StringUtils.equalsIgnoreCase(testPlan.getGroupId(), TestPlanConstants.TEST_PLAN_DEFAULT_GROUP_ID)) {
-            this.updateTestPlanGroupStatus(testPlan.getGroupId());
-        }
-    }
-
-    private void updateTestPlanGroupStatus(String testPlanGroupId) {
-        //该测试计划是测试计划组内的子计划， 要同步计算测试计划组的状态
-        List<TestPlan> childPlan = this.selectNotArchivedChildren(testPlanGroupId);
-        String groupStatus = TestPlanConstants.TEST_PLAN_STATUS_PREPARED;
-
-        //        未开始:计划组为空、组内所有计划都是“未开始”状态
-        //        已完成:组内计划均为“已完成”状态
-        //        进行中:组内计划有未完成的状态
-        if (CollectionUtils.isNotEmpty(childPlan)) {
-            List<String> testPlanStatus = childPlan.stream().map(TestPlan::getStatus).distinct().toList();
-            if (testPlanStatus.size() == 1) {
-                if (StringUtils.equals(testPlanStatus.getFirst(), TestPlanConstants.TEST_PLAN_STATUS_COMPLETED)) {
-                    groupStatus = TestPlanConstants.TEST_PLAN_STATUS_COMPLETED;
-                } else if (StringUtils.equals(testPlanStatus.getFirst(), TestPlanConstants.TEST_PLAN_STATUS_PREPARED)) {
-                    groupStatus = TestPlanConstants.TEST_PLAN_STATUS_PREPARED;
-                } else if (StringUtils.equals(testPlanStatus.getFirst(), TestPlanConstants.TEST_PLAN_STATUS_UNDERWAY)) {
-                    groupStatus = TestPlanConstants.TEST_PLAN_STATUS_UNDERWAY;
-                }
-            } else {
-                groupStatus = TestPlanConstants.TEST_PLAN_STATUS_UNDERWAY;
-            }
-        }
-        TestPlan updateGroupPlan = new TestPlan();
-        updateGroupPlan.setId(testPlanGroupId);
-        updateGroupPlan.setStatus(groupStatus);
-        testPlanMapper.updateByPrimaryKeySelective(updateGroupPlan);
-        if (StringUtils.equalsIgnoreCase(updateGroupPlan.getStatus(), TestPlanConstants.TEST_PLAN_STATUS_COMPLETED)) {
-            extTestPlanMapper.setActualEndTime(testPlanGroupId, System.currentTimeMillis());
-        }
-    }
-
-    public void refreshTestPlanStatus(String testPlanId) {
-        Map<String, Long> caseExecResultCount = new HashMap<>();
-        Map<String, TestPlanResourceService> beansOfType = applicationContext.getBeansOfType(TestPlanResourceService.class);
-        beansOfType.forEach((k, v) -> {
-            Map<String, Long> map = v.caseExecResultCount(testPlanId);
-            map.forEach((key, value) -> {
-                if (value != 0) {
-                    caseExecResultCount.merge(key, value, Long::sum);
-                }
-            });
-        });
-
-        String testPlanFinalStatus = TestPlanConstants.TEST_PLAN_STATUS_UNDERWAY;
-        if (MapUtils.isEmpty(caseExecResultCount)) {
-            // 没有任何执行结果： 状态是未开始
-            testPlanFinalStatus = TestPlanConstants.TEST_PLAN_STATUS_PREPARED;
-            extTestPlanMapper.clearActualEndTime(testPlanId);
-        } else if (caseExecResultCount.size() == 1 && caseExecResultCount.containsKey(ExecStatus.PENDING.name()) && caseExecResultCount.get(ExecStatus.PENDING.name()) > 0) {
-            // 执行结果只有未开始： 状态是未开始
-            testPlanFinalStatus = TestPlanConstants.TEST_PLAN_STATUS_PREPARED;
-            extTestPlanMapper.clearActualEndTime(testPlanId);
-        } else if (!caseExecResultCount.containsKey(ExecStatus.PENDING.name())) {
-            // 执行结果没有未开始： 已完成
-            testPlanFinalStatus = TestPlanConstants.TEST_PLAN_STATUS_COMPLETED;
-            extTestPlanMapper.setActualEndTime(testPlanId, System.currentTimeMillis());
-        }
-
-        this.updateTestPlanStatusAndGroupStatus(testPlanId, testPlanFinalStatus);
-    }
-
-    public TestPlanOperationResponse sortInGroup(PosRequest request, LogInsertModule logInsertModule) {
+    public TestPlanOperationResponse sort(PosRequest request, LogInsertModule logInsertModule) {
         testPlanGroupService.sort(request);
         testPlanLogService.saveMoveLog(testPlanMapper.selectByPrimaryKey(request.getMoveId()), request.getMoveId(), logInsertModule);
         return new TestPlanOperationResponse(1);
     }
 
-    public String scheduleConfig(BaseScheduleConfigRequest request, String operator) {
-        TestPlan testPlan = testPlanMapper.selectByPrimaryKey(request.getResourceId());
-        if (testPlan == null) {
-            throw new MSException(Translator.get("test_plan.not.exist"));
-        }
-        ScheduleConfig scheduleConfig = ScheduleConfig.builder()
-                .resourceId(testPlan.getId())
-                .key(testPlan.getId())
-                .projectId(testPlan.getProjectId())
-                .name(testPlan.getName())
-                .enable(request.isEnable())
-                .cron(request.getCron())
-                .resourceType(ScheduleResourceType.TEST_PLAN.name())
-                .config(JSON.toJSONString(request.getRunConfig()))
-                .build();
-
-        if (request.isEnable() && StringUtils.equalsIgnoreCase(testPlan.getType(), TestPlanConstants.TEST_PLAN_TYPE_GROUP)) {
-            //配置开启的测试计划组定时任务，要将组下的所有测试计划定时任务都关闭掉
-            List<TestPlan> children = this.selectNotArchivedChildren(testPlan.getId());
-            for (TestPlan child : children) {
-                scheduleService.updateIfExist(child.getId(), false, TestPlanScheduleJob.getJobKey(testPlan.getId()),
-                        TestPlanScheduleJob.getTriggerKey(testPlan.getId()),
-                        TestPlanScheduleJob.class, operator);
-            }
-        }
-
-        return scheduleService.scheduleConfig(
-                scheduleConfig,
-                TestPlanScheduleJob.getJobKey(testPlan.getId()),
-                TestPlanScheduleJob.getTriggerKey(testPlan.getId()),
-                TestPlanScheduleJob.class,
-                operator);
-    }
-
     public void deleteScheduleConfig(String testPlanId) {
         scheduleService.deleteByResourceId(testPlanId, TestPlanScheduleJob.getJobKey(testPlanId), TestPlanScheduleJob.getTriggerKey(testPlanId));
 
-        //判断有没有测试计划组
+        //判断是不是测试计划组
         TestPlanExample testPlanExample = new TestPlanExample();
         testPlanExample.createCriteria().andGroupIdEqualTo(testPlanId);
         testPlanMapper.selectByExample(testPlanExample).forEach(
@@ -936,9 +872,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
         List<String> userIds = hisList.stream().map(TestPlanExecuteHisDTO::getOperationUser).distinct().toList();
         List<OptionDTO> userOptions = baseUserMapper.selectUserOptionByIds(userIds);
         Map<String, String> userMap = userOptions.stream().collect(Collectors.toMap(OptionDTO::getId, OptionDTO::getName));
-        hisList.forEach(his -> {
-            his.setOperationUser(userMap.getOrDefault(his.getOperationUser(), his.getOperationUser()));
-        });
+        hisList.forEach(his -> his.setOperationUser(userMap.getOrDefault(his.getOperationUser(), his.getOperationUser())));
         return hisList;
     }
 
@@ -963,7 +897,7 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     public List<TestPlan> selectNotArchivedChildren(String testPlanGroupId) {
         TestPlanExample example = new TestPlanExample();
         example.createCriteria().andGroupIdEqualTo(testPlanGroupId).andStatusNotEqualTo(TestPlanConstants.TEST_PLAN_STATUS_ARCHIVED);
-        example.setOrderByClause("pos asc");
+        example.setOrderByClause("pos desc");
         return testPlanMapper.selectByExample(example);
     }
 
@@ -1066,7 +1000,6 @@ public class TestPlanService extends TestPlanBaseUtilsService {
     @Transactional(rollbackFor = Exception.class, propagation = Propagation.NOT_SUPPORTED)
     public void setExecuteConfig(String testPlanId, String testPlanReportId) {
         this.setActualStartTime(testPlanId);
-        this.setTestPlanUnderway(testPlanId);
         if (StringUtils.isNotBlank(testPlanReportId)) {
             testPlanReportService.updateExecuteTimeAndStatus(testPlanReportId);
         }
